c/e, translating place names

--- a/ᎫᏔᏍᏲᏍᏗ.mw
+++ b/ᎫᏔᏍᏲᏍᏗ.mw
@@ -16,9 +16,9 @@
 Between 100 and 150, [[List of Rosa species|ᎠᎪᏩᏛᏗ ᏙᎪᏩᎸ]]
 }}
 
-'''ᎫᏔᏍᏲᏍᏗ''' ᎨᏒᎢ ᎠᏛᎯᏍᏙᏗ [[shrub|ᎦᎪᏘ]] ᎯᎠ [[genus|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] '''''Rosa''''', ᎠᎴ ᎯᎠ [[flower|ᎠᏥᎸᏍᎩ]] ᎪᎯ ᎦᎪᏘ. ᎾᎿᎢ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏍᎪᎯᏧᏈ [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎨᏯᏔᎯ ᎫᏔᏍᏲᏍᏗ, ᏂᎦᏛ ᏂᏛᎴᏅᏓ ᎯᎠ [[northern hemisphere|ᎤᏴᏢ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]] ᎠᎴ ᎾᏍᎩ ᎤᎪᏗᏗ ᏂᏛᎴᏅᏓ ᎡᎷᏪᎢ ᎤᏔᏂᏗ ᎦᏙᎯ. ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᏙᏢᏒ ᎤᎾᏓᏟᏌᎲ ᏂᎦᎥᏊ ᏓᏍᏘᏳᏍᏘ [[shrub|ᎦᎪᏘ]] ᎠᎴ [[liana|ᎫᎴᎦ]], ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎦᎳᏄᏂ ᏗᎦᎪᎯᏗ, ᎠᎾᏙᏯᏅᎯᏗᏍᎬ 2–5&nbsp;m ᎢᏅ ᎢᎦᏘ, ᎢᏅᎯ ᎢᏳᏓᎵ ᎠᎾᏙᏯᏅᎯᏗᏍᎬ ᏥᏄᏍᏗ ᎦᎸᎳᏗ ᏥᏄᏍᏗ 20&nbsp;m ᎾᎥᎢ ᏥᎵᎱ ᎦᏬᎯᎸᏙᏗ ᏐᎢ ᏗᎦᎪᎯᏗ.
+'''ᎫᏔᏍᏲᏍᏗ''' ᎨᏒᎢ ᎠᏛᎯᏍᏙᏗ [[shrub|ᎦᎪᏘ]] ᎯᎠ [[genus|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] '''''Rosa''''', ᎠᎴ ᎯᎠ [[flower|ᎠᏥᎸᏍᎩ]] ᎪᎯ ᎦᎪᏘ. ᎾᎿᎢ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏍᎪᎯᏧᏈ [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎨᏯᏔᎯ ᎫᏔᏍᏲᏍᏗ, ᏂᎦᏛ ᏂᏛᎴᏅᏓ ᎯᎠ [[northern hemisphere|ᏧᏴᏢ ᎠᏰᏟ]] ᎠᎴ ᎾᏍᎩ ᎤᎪᏗᏗ ᏂᏛᎴᏅᏓ ᎡᎷᏪᎢ ᎤᏔᏂᏗ ᎦᏙᎯ. ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᏙᏢᏒ ᎤᎾᏓᏟᏌᎲ ᏂᎦᎥᏊ ᏓᏍᏘᏳᏍᏘ [[shrub|ᎦᎪᏘ]] ᎠᎴ [[liana|ᎫᎴᎦ]], ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎦᎳᏄᏂ ᏗᎦᎪᎯᏗ, ᎠᎾᏙᏯᏅᎯᏗᏍᎬ 2–5&nbsp;m ᎢᏅ ᎢᎦᏘ, ᎢᏅᎯ ᎢᏳᏓᎵ ᎠᎾᏙᏯᏅᎯᏗᏍᎬ ᏥᏄᏍᏗ ᎦᎸᎳᏗ ᏥᏄᏍᏗ 20&nbsp;m ᎾᎥᎢ ᏥᎵᎱ ᎦᏬᎯᎸᏙᏗ ᏐᎢ ᏗᎦᎪᎯᏗ.
 
-ᎯᎠ ᏚᏙᎥ ᎠᎴᏅᏙᏗ ᏂᏛᎴᏅᏓ [[Latin]] ''rosa'', ᎤᏙᎳᏒ ᏗᎬᏩᎶᏒ Oscan ᏂᏛᎴᏅᏓ ᎢᏳᏕᏘᏴᏓ [[Greeks|ᎠᏂᎪᎢ]] ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ ᎢᏗᏢ [[Italy]] ''rhodion'' ([[Aeolic]] ''wrodion''), ᏂᏛᎴᏅᏓ [[Aramaic]] ''wurrdā'', ᏂᏛᎴᏅᏓ [[Assyrian language|Assyrian]] ''wurtinnu'', ᏂᏛᎴᏅᏓ ᎠᎦᏴᎵ Iranian *''warda'' (cf. [[Avestan]] ''warda'', [[Sogdian language|Sogdian]] ''ᎠᏥᎦᏘᏯ'', [[Parthian language|Parthian]] ''wâr'').
+ᎯᎠ ᏚᏙᎥ ᎠᎴᏅᏙᏗ ᏂᏛᎴᏅᏓ [[Latin|ᎳᏗᎾ]] ''rosa'', ᎤᏙᎳᏒ ᏗᎬᏩᎶᏒ Oscan ᏂᏛᎴᏅᏓ ᎢᏳᏕᏘᏴᏓ [[Greeks|ᎠᏂᎪᎢ]] ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ ᎢᏗᏢ [[Italy|ᏲᎶ]] ''rhodion'' ([[Aeolic]] ''wrodion''), ᏂᏛᎴᏅᏓ [[Aramaic]] ''wurrdā'', ᏂᏛᎴᏅᏓ [[Assyrian language|Assyrian]] ''wurtinnu'', ᏂᏛᎴᏅᏓ ᎠᎦᏴᎵ Iranian ''warda'' (cf. [[Avestan]] ''warda'', [[Sogdian language|Sogdian]] ''ᎠᏥᎦᏘᏯ'', [[Parthian language|Parthian]] ''wâr'').
 
 ᎯᎠ [[leaf|ᏧᎦᎶᎦ]] ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ 5–15&nbsp;cm ᎦᏅᎯᏓ, [[pinnate]], ᎬᏙᏗ (3–) 5–9 (–13) ᎢᎦᏛ ᎠᎴ basal stipules; ᎯᎠ ᎢᎦᏛ ᎤᏠᏱᎭ ᎤᎭ ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᏧᎬᏩᎶᏗᎢ, ᎠᎴ ᎢᏳᏓᎵᎭ ᎦᏲᎵ ᎤᏍᏗ ᏧᏣᏲᏍᏗ ᎾᎿ ᎯᎠ underside ᎯᎠ ᎤᏩᏂᎦᎸ. ᎯᎠ ᎤᎪᏗᏗ ᎤᏂᎪᏗᏗ ᎫᏔᏍᏲᏍᏗ ᎠᎴ [[deciduous|ᎠᏓᏁᎳᏅᎯ]], ᎠᎴ ᎦᏲᎵ (ᎾᏍᎩᎾ ᎨᏒ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ ᎧᎸᎬ [[Asia]]) ᎠᎴ [[evergreen|ᎦᏌᏆᎸ]] ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ.
 
@@ -44,12 +44,12 @@ Between 100 and 150, [[List of Rosa species|ᎠᎪᏩᏛᏗ ᏙᎪᏩᎸ]]
 * ''[[Rosa multiflora]]'' - Multiflora ᎫᏔᏍᏲᏍᏗ
 * ''[[Rosa persica]]'' (syn. ''Hulthemia persica'', ''R. simplicifolia'')
 * ''[[Rosa roxburghii]]'' - ᎤᎾᎩᎾ ᎫᏔᏍᏲᏍᏗ, ᎤᏂᏍᏗᎸᎢᏍᏗ ᎫᏔᏍᏲᏍᏗ
-* ''[[Rosa rugosa]]'' - Rugosa ᎫᏔᏍᏲᏍᏗ, Japanese ᎫᏔᏍᏲᏍᏗ
+* ''[[Rosa rugosa]]'' - Rugosa ᎫᏔᏍᏲᏍᏗ, [[Japanese rose|ᏣᏩᏂᏏ ᎫᏔᏍᏲᏍᏗ]]
 * ''[[Rosa stellata]]'' - ᎠᏯᎶᎢᏍᎩ ᎫᏔᏍᏲᏍᏗ, Sacramento ᎫᏔᏍᏲᏍᏗ
-* ''[[Rosa virginiana]]'' (syn. ''R. lucida'') - Virginia ᎫᏔᏍᏲᏍᏗ
+* ''[[Rosa virginiana]]'' (syn. ''R. lucida'') - [[Virginia rose|ᏩᏥᏂ ᎫᏔᏍᏲᏍᏗ]]
 
 == ᎥᏳᎩ ==
-ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎯᎸᏍᎩ [[disease|ᎥᏳᎩ]]. ᎯᎠ ᎤᎪᏗᏗ ᎤᏢᏲᎵᏍᏗ ᎨᏒᎢ [[rose rust|ᎫᏔᏍᏲᏍᏗ ᏧᏓᏗᎩᏓ]] (''Phragmidium mucronatum''), ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ [[rust (fungus)|ᏧᏓᏗᎩᏓ ᏂᎯ]], ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ defoliate ᎯᎠ ᎦᎪᏘ. ᎤᏟ ᎢᎦᎢ ᏧᏣᏔᏊ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎦᏲᎵᎨ debilitating, ᎠᎴ [[Black Spot|ᎫᏔᏍᏲᏍᏗ ᎬᎿᎨ ᎤᏓᏓᎸ]], ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ᎯᎠ ᏂᎯ ''Diplocarpon rosae'', ᎦᏙ ᎤᏍᏗ ᏗᎪᏢᏅ ᎬᏩᏚᏫᏛ ᎬᎿᎨ ᎪᏢᏒᎢ ᎾᎿ ᎯᎠ ᏧᎦᎶᎦ ᎭᏫᎾᏗᏢ ᎪᎨᏱ, ᎠᎴ [[powdery mildew|ᎢᎦᎢ ᎦᎳᏅᎯ]], ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ''Sphaerotheca pannosa''. ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎠᎵᏍᏓᏴᏗ ᏗᎦᎪᎯᏗ ᎾᎥᎢ ᎯᎠ [[larva|ᎠᏲᎵe]] ᎢᎦᏛ [[Lepidoptera]] ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ; ᎠᎪᏩᏛᏗ [[list of Lepidoptera which feed on Roses|ᏙᎪᏩᎸ  Lepidoptera ᎦᏙ ᎤᏍᏗ ᎨᎳᏍᏙᏗ ᎾᎿ ᎫᏔᏍᏲᏍᏗ]].
+ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎯᎸᏍᎩ [[disease|ᎥᏳᎩ]]. ᎯᎠ ᎤᎪᏗᏗ ᎤᏢᏲᎵᏍᏗ ᎨᏒᎢ [[rose rust|ᎫᏔᏍᏲᏍᏗ ᏧᏓᏗᎩᏓ]] (''Phragmidium mucronatum''), ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ [[rust (fungus)|ᏧᏓᏗᎩᏓ ᏂᎯ]], ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ defoliate ᎯᎠ ᎦᎪᏘ. ᎤᏟ ᎢᎦᎢ ᏧᏣᏔᏊ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎦᏲᎵᎨ debilitating, ᎠᎴ [[Black Spot|ᎫᏔᏍᏲᏍᏗ ᎬᎿᎨ ᎤᏓᏓᎸ]], ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ᎯᎠ ᏂᎯ ''Diplocarpon rosae'', ᎦᏙ ᎤᏍᏗ ᏗᎪᏢᏅ ᎬᏩᏚᏫᏛ ᎬᎿᎨ ᎪᏢᏒᎢ ᎾᎿ ᎯᎠ ᏧᎦᎶᎦ ᎭᏫᎾᏗᏢ ᎪᎨᏱ, ᎠᎴ [[powdery mildew|ᎢᎦᎢ ᎦᎳᏅᎯ]], ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ''Sphaerotheca pannosa''. ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎠᎵᏍᏓᏴᏗ ᏗᎦᎪᎯᏗ ᎾᎥᎢ ᎯᎠ [[larvae|ᎠᏂᏲᎵ]] ᎢᎦᏛ [[Lepidoptera]] ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ; ᎠᎪᏩᏛᏗ [[list of Lepidoptera which feed on Roses|ᏙᎪᏩᎸ  Lepidoptera ᎦᏙ ᎤᏍᏗ ᎨᎳᏍᏙᏗ ᎾᎿ ᎫᏔᏍᏲᏍᏗ]].
 
 ᎾᏍᎩ ᎯᎠ fungal ᎥᏳᎩ ᎠᎴ ᎣᎯᏍᏗ ᎤᏍᏆᏂᎪᏗ ᎾᎥᎢ ᎠᏅᏬᏗ ᎢᎦᏛ ᎢᏯᏛᏁᏗ ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᎾᎥᎢ ᎠᏁᎶᏗᏍᎬ ᎠᏅᏬᏗ ᎥᏳᎩ ᎤᎶᏐᏅ ᎾᏍᎩ ᎨᏒᎢ ᎬᎪᏩᏛᏗ.
 
@@ -67,7 +67,7 @@ Between 100 and 150, [[List of Rosa species|ᎠᎪᏩᏛᏗ ᏙᎪᏩᎸ]]
 |}
 ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᏌᏊ ᎯᎠ ᎤᎪᏗᏗ ᎤᏂᎸᏉᏗ [[garden|ᎠᏫᏒᏅ]] ᎦᎪᏘ ᎠᎴ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᏄᎾᏛᏅ ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᎫᏔᏍᏲᏍᏗ ᎦᎾᏗᏅᏓ ᎾᎥᎢ [[florist|ᏗᎦᎶᎪᏗ]]. ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎡᏆ ᎠᎳᏏᏅᏙᏗ ᏭᎵᏍᎨᏗᏴ ᎢᏧᎳ ᏥᏄᏍᏗ ᏠᎨᏏ ᎠᏫᏒ ᎾᏍᎩᎾᎢ ᏗᎦᎶᎪᏗ' ᎬᏙᏗ ᎠᎴ ᎾᏍᎩᎾᎢ ᎬᏙᏗ ᎭᏫᎾᏗᏢ [[perfume|ᎠᎵᏍᏚᏟᏍᏗ]]. 
 
-ᎤᎪᏗᏗ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᎫᏔᏍᏲᏍᏗ [[hybrid|ᏧᏠᎯᏍᏗ]] ᎠᎴ [[cultivar]] ᎤᎭ ᏭᏪᏙᎢ ᏗᏓᏓᏂᎸᏣᏘ ᎠᎴ ᎠᏑᏰᏛ ᎾᏍᎩᎾᎢ ᎠᏫᏒᏅ ᎬᏙᏗ, ᎾᏍᎩ ᎤᎪᏗᏗ ᏔᎵ ᎢᏳᏩᎫᏘ-flowered ᎬᏙᏗ ᎤᎪᏗᏗ ᎠᎴ ᏂᎦᏛ ᎯᎠ [[stamen]]mutated ᎾᎾᎯ ᏗᎦᏟᏌᏅᎯ [[petal]]. ᏥᏄᏍᏗ ᎦᏅᎯᏓ ᎢᏳ ᏥᎨᏒ ᏥᏄᏍᏗ 1840 ᎤᏓᏂᏝᏅ ᎠᏓᏃᎮᏗ ᎦᏬᎯᎸᏙᏗ ᏌᏊ ᎠᎦᏴᎵ ᏄᏓᎴᎿᎥ cultivars, varieties ᎠᎴ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏥᏄᏍᏛᎩ ᏰᎵᏊ ᎯᎳᎪ ᎢᏳ rosarium ᏥᏄᏍᏛᎩ ᎦᎧᏅ ᎾᎥᎢ [[Loddiges|Loddiges ᎠᏛᏍᎩ]] ᎾᏍᎩᎾᎢ [[Abney Park Cemetery|Abney ᎠᏣᏪᏐᎸᏍᏙᏗ ᏗᏓᏂᏐᏗ]], ᎢᎬᏱ Victorian ᎠᏫᏒᏅ ᏗᏓᏂᏐᏗ ᎠᎴ ᎦᎪᏘ ᎭᏫᎾᏗᏢ England. ᏔᎵᏍᎪᎯᏁ-ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎫᏔᏍᏲᏍᏗ ᏗᏄᏍᎩ ᏂᎦᎥᏊ emphasized ᏂᎬᎢ ᎠᎴ ᏗᎧᏃᏗ, ᎠᏛᎯᏍᏗᏍᎬ ᎡᏆ, ᎤᎵᎶᎯ ᎤᏥᎸᏒ ᎬᏙᏗ ᎤᏍᏗ ᎠᎴ Ꮭ ᎦᏩᏒᎬ. ᎤᎪᏗᏗ ᎨᏯᏔᎯ ᎠᎴ "ᎠᎦᏴᎵ-ᎠᏛᏍᎩ" ᎫᏔᏍᏲᏍᏗ, ᎾᎥᎢ ᏧᏓᎴᎾᎢ, ᎤᎭ ᎤᎳᏂᎩᏓ ᎤᎦᎾᏍᏛ [[scent|ᎦᏩᏒᎬ]].  
+ᎤᎪᏗᏗ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᎫᏔᏍᏲᏍᏗ [[hybrid|ᏧᏠᎯᏍᏗ]] ᎠᎴ [[cultivar]] ᎤᎭ ᏭᏪᏙᎢ ᏗᏓᏓᏂᎸᏣᏘ ᎠᎴ ᎠᏑᏰᏛ ᎾᏍᎩᎾᎢ ᎠᏫᏒᏅ ᎬᏙᏗ, ᎾᏍᎩ ᎤᎪᏗᏗ ᏔᎵ ᎢᏳᏩᎫᏘ-flowered ᎬᏙᏗ ᎤᎪᏗᏗ ᎠᎴ ᏂᎦᏛ ᎯᎠ [[stamen]]mutated ᎾᎾᎯ ᏗᎦᏟᏌᏅᎯ [[petal]]. ᏥᏄᏍᏗ ᎦᏅᎯᏓ ᎢᏳ ᏥᎨᏒ ᏥᏄᏍᏗ 1840 ᎤᏓᏂᏝᏅ ᎠᏓᏃᎮᏗ ᎦᏬᎯᎸᏙᏗ ᏌᏊ ᎠᎦᏴᎵ ᏄᏓᎴᎿᎥ cultivars, varieties ᎠᎴ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏥᏄᏍᏛᎩ ᏰᎵᏊ ᎯᎳᎪ ᎢᏳ rosarium ᏥᏄᏍᏛᎩ ᎦᎧᏅ ᎾᎥᎢ [[Loddiges|Loddiges ᎠᏛᏍᎩ]] ᎾᏍᎩᎾᎢ [[Abney Park Cemetery|Abney ᎠᏣᏪᏐᎸᏍᏙᏗ ᏗᏓᏂᏐᏗ]], ᎢᎬᏱ Victorian ᎠᏫᏒᏅ ᏗᏓᏂᏐᏗ ᎠᎴ ᎦᎪᏘ ᎭᏫᎾᏗᏢ [[England|ᎩᎵᏏᎯ]]. ᏔᎵᏍᎪᎯᏁ-ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎫᏔᏍᏲᏍᏗ ᏗᏄᏍᎩ ᏂᎦᎥᏊ emphasized ᏂᎬᎢ ᎠᎴ ᏗᎧᏃᏗ, ᎠᏛᎯᏍᏗᏍᎬ ᎡᏆ, ᎤᎵᎶᎯ ᎤᏥᎸᏒ ᎬᏙᏗ ᎤᏍᏗ ᎠᎴ Ꮭ ᎦᏩᏒᎬ. ᎤᎪᏗᏗ ᎨᏯᏔᎯ ᎠᎴ "ᎠᎦᏴᎵ-ᎠᏛᏍᎩ" ᎫᏔᏍᏲᏍᏗ, ᎾᎥᎢ ᏧᏓᎴᎾᎢ, ᎤᎭ ᎤᎳᏂᎩᏓ ᎤᎦᎾᏍᏛ [[scent|ᎦᏩᏒᎬ]].  
 
 ᎫᏔᏍᏲᏍᏗ ᎣᏍᏛ ᎢᏳᏅᏁᎯ ᎭᏫᎾᏗᏢ [[temperate climate|ᎡᎷᏪᎢ ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ]], ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎤᏙᎯᏳ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ cultivars ᏰᎵᏇ ᏧᏩᏚᏃᎯ ᎭᏫᎾᏗᏢ [[sub-tropical|ᎠᏂᎦᏲᎵ-ᎤᎦᎾᏭ]] ᎠᎴ ᎢᏧᎳᎭ [[tropical|ᎤᎦᎾᏭ]] ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ, ᎾᏍᎩ ᎨᏒᎢ ᎯᎳᎪ ᎢᏳ [[grafting|grafted]] onto ᏗᏙᎳᎩ ᎤᎾᏍᏕᏢ-ᎤᏂᎲ ᏧᎬᏩᎶᏗ. 
 
@@ -75,18 +75,17 @@ Between 100 and 150, [[List of Rosa species|ᎠᎪᏩᏛᏗ ᏙᎪᏩᎸ]]
 * '''ᎨᏯᏔᎯ ᎫᏔᏍᏲᏍᏗ''' - ᎯᎠ ᎨᏯᏔᎯ ᎫᏔᏍᏲᏍᏗ ᎠᏠᏯᏍᏗ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎦᎸᎳᏗᏢ ᎠᎴ ᎢᎦᏛ ᎤᎾᏤᎵ ᏧᏠᎯᏍᏗ.
 * '''ᎠᎦᏴᎵ ᎠᏫᏒᏅ ᎫᏔᏍᏲᏍᏗ''' - ᎤᎪᏗᏗ ᎠᎦᏴᎵ ᎠᏫᏒᏅ ᎫᏔᏍᏲᏍᏗ ᎠᎴ classified ᎾᎾᎯ ᏌᏊ ᎯᎠ ᎠᏍᏓᏩᏗᏒ (ᎠᏓᏅᏒᎯ ᎾᎥᎢ ᎾᎥᏂᎨᏍᏙᏗ ᎢᏳᏕᏘᏴᏓ - ᎢᏳᏕᏘᏴᏓ ᎢᎬᏱ): 
 ** '''ᎦᏚ ᎠᏄᏬᏍᏗ''' - ᎾᏍᎩᏯ ᎪᏪᎸ "ᎤᏁᎬ ᎫᏔᏍᏲᏍᏗ", derived ᏂᏛᎴᏅᏓ ''R. arvensis'' ᎠᎴ ᎯᎠ ᎾᎥᏂᎨᎢ ᏚᎾᏓᏚᏓᎸ ''R. ᎦᏚ ᎠᏄᏬᏍᏗ''. ᎾᏍᎩ ᎯᎠ ᎠᎴ ᎢᎦᏛ ᎯᎠ ᎢᏳᏕᏘᏴᏓ ᎠᏫᏒᏅ ᎫᏔᏍᏲᏍᏗ, ᏄᏓᎷᎸᎾ ᎠᏲᎸᎯ [[Great Britain|ᎡᏆ Britain]] ᎾᎥᎢ ᎯᎠ [[Ancient Rome|ᎶᎻ]]. ᏌᏊ ᎢᏳᏩᎫᏗ-ᎠᏛᎯᏍᏙᏗ. ᏱᏓᏟᎶᏍᏔᏅ: 'ᏴᎩ-plena', '[[White Rose of York|York ᎤᏁᎬ ᎫᏔᏍᏲᏍᏗ]]'.
-** '''[[Gallic Rose|Gallica]]''' - ᎯᎠ Gallica ᎫᏔᏍᏲᏍᏗ ᎤᎭ ᏭᏪᏙᎢ ᎤᏙᎷᏩᏛᏓ ᏂᏛᎴᏅᏓ ''R. gallica'' ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎾᏰᎯᏯ ᎠᏰᎵ ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ [[Europe]]. ᎤᏅᏌ ᎫᏔᏍᏲᏍᏗ ᏌᏊ ᎢᏳᏩᎫᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᎨᏱ. ᏱᏓᏟᎶᏍᏔᏅ: 'ᏙᏧ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Richelieu', 'Charles ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏗᏍᏙᏍᎩ', 'Rosa Mundi' (''R. gallica ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ'').
-** '''[[Rosa damascena|ᎩᎦᎨ]]''' - Robert ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Brie ᎨᏒᎢ ᎠᏓᏁᎸ adatudi ᎾᏍᎩᎾᎢ ᎠᏲᎯᎲ ᎠᏂ ᏂᏛᎴᏅᏓ [[Iran|Persia]] Europe ᎢᏳᏊ ᏂᎦᎵᏍᏗ ᎠᏰᎵ 1254 ᎠᎴ 1276. ᎪᎨᏱ ᎩᎦᎨ (crosses ᎠᏰᎵ Gallica ᎫᏔᏍᏲᏍᏗ ᎠᎴ ''R. phoenicea'') ᎤᏥᎸᏒ ᏌᏊ ᎢᏳᏩᎫᏗ ᎭᏫᎾᏗᏢ ᎪᎨᏱ. ᎤᎳᎪᎲᏍᏗ ᎩᎦᎨ (Gallicas ᏗᎦᎾᏗᏫᏍᏗ ᎬᏙᏗ ''R. moschata'') ᎤᏥᎸᏒ ᎣᏂᏯᎨᏍᏙᏗ, ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᎪᎲᏍᏗ. ᏱᏓᏟᎶᏍᏔᏅ: '[[Ispahan (rose)|Ispahan]]', 'ᎠᎨᏴ ᏄᎵᏂᎬᎬ'.
+** '''[[Gallic Rose|Gallica]]''' - ᎯᎠ Gallica ᎫᏔᏍᏲᏍᏗ ᎤᎭ ᏭᏪᏙᎢ ᎤᏙᎷᏩᏛᏓ ᏂᏛᎴᏅᏓ ''R. gallica'' ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎾᏰᎯᏯ ᎠᏰᎵ ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ [[Europe|ᏳᎳᏛ]]. ᎤᏅᏌ ᎫᏔᏍᏲᏍᏗ ᏌᏊ ᎢᏳᏩᎫᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᎨᏱ. ᏱᏓᏟᎶᏍᏔᏅ: 'ᏙᏧ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Richelieu', 'Charles ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏗᏍᏙᏍᎩ', 'Rosa Mundi' (''R. gallica ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ'').
+** '''[[Rosa damascena|ᎩᎦᎨ]]''' - Robert ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Brie ᎨᏒᎢ ᎠᏓᏁᎸ ᎠᏓᏚᏗ ᎾᏍᎩᎾᎢ ᎠᏲᎯᎲ ᎠᏂ ᏂᏛᎴᏅᏓ [[Iran|Persia]] [[Europe|ᏳᎳᏛ]] ᎢᏳᏊ ᏂᎦᎵᏍᏗ ᎠᏰᎵ 1254 ᎠᎴ 1276. ᎪᎨᏱ ᎩᎦᎨ (crosses ᎠᏰᎵ Gallica ᎫᏔᏍᏲᏍᏗ ᎠᎴ ''R. phoenicea'') ᎤᏥᎸᏒ ᏌᏊ ᎢᏳᏩᎫᏗ ᎭᏫᎾᏗᏢ ᎪᎨᏱ. ᎤᎳᎪᎲᏍᏗ ᎩᎦᎨ (Gallicas ᏗᎦᎾᏗᏫᏍᏗ ᎬᏙᏗ ''R. moschata'') ᎤᏥᎸᏒ ᎣᏂᏯᎨᏍᏙᏗ, ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᎪᎲᏍᏗ. ᏱᏓᏟᎶᏍᏔᏅ: '[[Ispahan (rose)|Ispahan]]', 'ᎠᎨᏴ ᏄᎵᏂᎬᎬ'.
 ** '''[[Rosa centifolia|Centifolia]] (ᎠᎴ Provence)''' - ᎾᏍᎩ ᎯᎠ ᎫᏔᏍᏲᏍᏗ, ᎤᏛᎯᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ ᎯᎠ [[17th Century|ᎦᎵᏆᏚᏏᏁ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ [[Netherlands]], ᎠᎴ ᏓᎪᎥᎩ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ "ᏌᏊ ᏍᎪᎯᏧᏈ" petals. ᏌᏊ ᎢᏳᏩᎫᏗ-ᎠᏛᎯᏍᏙᏗ. ᏱᏓᏟᎶᏍᏔᏅ: 'Centifolia', 'Paul Ricault'.
 ** '''ᎦᎪᏘ''' - ᎾᎥᏂᎨᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎯᎠ centifolias, ᎾᏍᎩ ᎯᎠ ᎤᎭ ᎦᎪᏘ ᏂᎯ ᎾᎿ ᎯᎠ [[Plant stem|ᎤᏩᏂᎦᎸ]] ᎠᎴ [[sepal]]. ᏌᏊ ᎢᏳᏩᎫᏗ-ᎠᏛᎯᏍᏙᏗ. ᏱᏓᏟᎶᏍᏔᏅ: 'Comtesse ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Murinais', 'ᎠᎦᏴᎵ ᎩᎦᎨ ᎢᏳᏍᏗ ᎦᎪᏘ'.
-** '''ᎠᎦᎾᏫᏗᏍᎩ''' - ᎯᎠ ᎠᎦᎾᏫᏗᏍᎩ ᎫᏔᏍᏲᏍᏗ ᎠᏲᎸᎯ ᎬᏙᏗ ᎠᏂ amazing ᏅᏏᎾᏒ ᎤᏥᎸᏒ ᎠᏤᎯᏐᏗᏱ ᏂᎦᏅᎯᏒ ᎯᎠ ᎪᎨᏱ ᎠᎴ ᎾᎾᎯ ᎣᏂᏱᏳ ᎤᎳᎪᎲᏍᏗ. ᏅᎩ ᎠᎦᎾᏫᏗᏍᎩ ᎫᏔᏍᏲᏍᏗ ('Slater ᎤᏤᎵ ᎩᎦᎨ ᎠᎦᎾᏫᏗᏍᎩ', 1792; 'ᎠᎵᏣᏙᎲᏍᎩ' ᎩᎦᎨ ᎢᏳᏍᏗ ᎠᎦᎾᏫᏗᏍᎩ', 1793; 'Hume ᎤᏤᎵ ᎠᏕᎰᎯᏍᏗ ᎠᎦᎾᏫᏗᏍᎩ', 1809; ᎠᎴ 'ᎠᏣᏪᏐᎸᏍᏙᏗ' ᏓᎶᏂᎨ ᎤᎦᎶᎬ ᎦᏩᏒᎩ ᎠᎦᎾᏫᏗᏍᎩ', 1824) ᎨᏒᎩ ᎠᏲᎸᎯ [[Europe]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂᏱᏳ [[18th Century|ᏁᎳᏚᏏᏁ]] ᎠᎴ [[19th Century]] ᎦᏙ ᎤᏍᏗ ᎠᏲᎸᎯ ᎬᏩᏚᏫᏛ ᎯᎠ ᏗᏁᏝᎾ ᎯᎠ ᏅᎬᎪᎪᎩ ᎠᏛᎯᏍᏙᏗ ᎠᎦᏴᎵ ᎠᏫᏒᏅ ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎣᏂᏯᎨᏍᏙᏗ ᎯᎠ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎠᏫᏒᏅ ᎫᏔᏍᏲᏍᏗ. ᏱᏓᏟᎶᏍᏔᏅ: 'ᎠᎦᏴᎵ ᎠᏕᎰᎯᏍᏗ ᎠᎦᎾᏫᏗᏍᎩ', 'Mutabilis'.
-** '''Portland''' - ᎾᏍᎩ ᎯᎠ ᎠᎴ ᏓᎪᎥᎩ ᎤᎶᏐᏅ ᎯᎠ [[Duke of Portland|ᏄᎬᏫᏳᏌᏕᎩ  Portland]] ᎦᎪ ᎤᎩᏒᎩ (ᏂᏛᎴᏅᏓ [[Italy]] ᎭᏫᎾᏗᏢ 1800) ᎫᏔᏍᏲᏍᏗ ᎾᎯᏳᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ''R. paestana'' ᎠᎴ 'ᎤᏍᎪᏍᏓ ᎩᎦᎨ ᏅᎩ ᎠᏓᏁᏟᏴᏍᎬ ᏑᏕᏘᏴᏓ' ᎫᏔᏍᏲᏍᏗ' (ᎾᏊ ᎤᎾᏅᏛ ᏄᏦᏍᏛᎾᏊ ᏥᏄᏍᏗ 'ᎯᎠ Portland ᎫᏔᏍᏲᏍᏗ'). ᎪᎯ ᎤᎾᏓᏟᏌᎲ ᏥᏄᏍᏛᎩ ᎤᏙᎷᏩᏛᏓ ᏂᏛᎴᏅᏓ Ꮎ ᎫᏔᏍᏲᏍᏗ. ᏅᎬᎪᎪᎩ-ᎠᏛᎯᏍᏙᏗ. ᏱᏓᏟᎶᏍᏔᏅ: 'James Veitch', 'ᎫᏔᏍᏲᏍᏗ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Rescht', 'ᎯᎠ Portland ᎫᏔᏍᏲᏍᏗ'.
-** '''Bourbon''' - ᎤᏅᏌ originated ᎾᎿ l'Île ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Bourbon (ᎾᏊ ᎤᏯᏅᎲ [[Réunion]]). ᏄᏓᎷᎸᎾ ᎯᎠ ᏄᎵᏍᏔᏅ ᏓᏓᎿᏩᏍᏛ ᎠᏰᎵ ᎯᎠ ᎤᎳᎪᎲᏍᏗ ᎩᎦᎨ ᎠᎴ ᎯᎠ 'ᎠᎦᏴᎵ ᎠᏕᎰᎯᏍᏗ ᎠᎦᎾᏫᏗᏍᎩ'. ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎭᏫᎾᏗᏢ [[France]] ᎭᏫᎾᏗᏢ 1823. ᏅᎬᎪᎪᎩ-ᎠᏛᎯᏍᏙᏗ. ᏱᏓᏟᎶᏍᏔᏅ: 'Louise Odier', 'Mme. Pierre Oger', 'Zéphirine Drouhin'.
-** '''ᏧᏠᎯᏍᏗ ᏂᎦᏰᎵᏒ ᏂᎪᎯᎸ''' - ᎯᎠ ᎾᏓᏛᏂᏌᏁᎲ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎫᏔᏍᏲᏍᏗ ᎭᏫᎾᏗᏢ [[Victorian Era|Victorian]] England, ᎤᏅᏌ ᎨᏒᎩ derived ᎡᏆ ᏫᎬᏍᏗ ᏂᏛᎴᏅᏓ ᎯᎠ Bourbons. ᏅᎬᎪᎪᎩ-ᎠᏛᎯᏍᏙᏗ. ᏱᏓᏟᎶᏍᏔᏅ: 'Ferdinand Pichard', 'Reine ᏕᏍ Violettes'.
+** '''ᎠᎦᎾᏫᏗᏍᎩ''' - ᎯᎠ ᎠᎦᎾᏫᏗᏍᎩ ᎫᏔᏍᏲᏍᏗ ᎠᏲᎸᎯ ᎬᏙᏗ ᎠᏂ amazing ᏅᏏᎾᏒ ᎤᏥᎸᏒ ᎠᏤᎯᏐᏗᏱ ᏂᎦᏅᎯᏒ ᎯᎠ ᎪᎨᏱ ᎠᎴ ᎾᎾᎯ ᎣᏂᏱᏳ ᎤᎳᎪᎲᏍᏗ. ᏅᎩ ᎠᎦᎾᏫᏗᏍᎩ ᎫᏔᏍᏲᏍᏗ ('Slater ᎤᏤᎵ ᎩᎦᎨ ᎠᎦᎾᏫᏗᏍᎩ', 1792; 'ᎠᎵᏣᏙᎲᏍᎩ' ᎩᎦᎨ ᎢᏳᏍᏗ ᎠᎦᎾᏫᏗᏍᎩ', 1793; 'Hume ᎤᏤᎵ ᎠᏕᎰᎯᏍᏗ ᎠᎦᎾᏫᏗᏍᎩ', 1809; ᎠᎴ 'ᎠᏣᏪᏐᎸᏍᏙᏗ' ᏓᎶᏂᎨ ᎤᎦᎶᎬ ᎦᏩᏒᎩ ᎠᎦᎾᏫᏗᏍᎩ', 1824) ᎨᏒᎩ ᎠᏲᎸᎯ [[Europe|ᏳᎳᏛ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂᏱᏳ [[18th Century|ᏁᎳᏚᏏᏁ]] ᎠᎴ [[19th Century|19th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ]] ᎦᏙ ᎤᏍᏗ ᎠᏲᎸᎯ ᎬᏩᏚᏫᏛ ᎯᎠ ᏗᏁᏝᎾ ᎯᎠ ᏅᎬᎪᎪᎩ ᎠᏛᎯᏍᏙᏗ ᎠᎦᏴᎵ ᎠᏫᏒᏅ ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎣᏂᏯᎨᏍᏙᏗ ᎯᎠ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎠᏫᏒᏅ ᎫᏔᏍᏲᏍᏗ. ᏱᏓᏟᎶᏍᏔᏅ: 'ᎠᎦᏴᎵ ᎠᏕᎰᎯᏍᏗ ᎠᎦᎾᏫᏗᏍᎩ', 'Mutabilis'.
+** '''Portland''' - ᎾᏍᎩ ᎯᎠ ᎠᎴ ᏓᎪᎥᎩ ᎤᎶᏐᏅ ᎯᎠ [[Duke of Portland|ᏄᎬᏫᏳᏌᏕᎩ  Portland]] ᎦᎪ ᎤᎩᏒᎩ (ᏂᏛᎴᏅᏓ [[Italy|ᏲᎶ]] ᎭᏫᎾᏗᏢ 1800) ᎫᏔᏍᏲᏍᏗ ᎾᎯᏳᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ''R. paestana'' ᎠᎴ 'ᎤᏍᎪᏍᏓ ᎩᎦᎨ ᏅᎩ ᎠᏓᏁᏟᏴᏍᎬ ᏑᏕᏘᏴᏓ' ᎫᏔᏍᏲᏍᏗ' (ᎾᏊ ᎤᎾᏅᏛ ᏄᏦᏍᏛᎾᏊ ᏥᏄᏍᏗ 'ᎯᎠ Portland ᎫᏔᏍᏲᏍᏗ'). ᎪᎯ ᎤᎾᏓᏟᏌᎲ ᏥᏄᏍᏛᎩ ᎤᏙᎷᏩᏛᏓ ᏂᏛᎴᏅᏓ Ꮎ ᎫᏔᏍᏲᏍᏗ. ᏅᎬᎪᎪᎩ-ᎠᏛᎯᏍᏙᏗ. ᏱᏓᏟᎶᏍᏔᏅ: 'James Veitch', 'ᎫᏔᏍᏲᏍᏗ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Rescht', 'ᎯᎠ Portland ᎫᏔᏍᏲᏍᏗ'.
+** '''Bourbon''' - ᎤᏅᏌ originated ᎾᎿ l'Île ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Bourbon (ᎾᏊ ᎤᏯᏅᎲ [[Réunion]]). ᏄᏓᎷᎸᎾ ᎯᎠ ᏄᎵᏍᏔᏅ ᏓᏓᎿᏩᏍᏛ ᎠᏰᎵ ᎯᎠ ᎤᎳᎪᎲᏍᏗ ᎩᎦᎨ ᎠᎴ ᎯᎠ 'ᎠᎦᏴᎵ ᎠᏕᎰᎯᏍᏗ ᎠᎦᎾᏫᏗᏍᎩ'. ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎭᏫᎾᏗᏢ [[France|ᎦᎸᏥᏱ]] ᎭᏫᎾᏗᏢ 1823. ᏅᎬᎪᎪᎩ-ᎠᏛᎯᏍᏙᏗ. ᏱᏓᏟᎶᏍᏔᏅ: 'Louise Odier', 'Mme. Pierre Oger', 'Zéphirine Drouhin'.
+** '''ᏧᏠᎯᏍᏗ ᏂᎦᏰᎵᏒ ᏂᎪᎯᎸ''' - ᎯᎠ ᎾᏓᏛᏂᏌᏁᎲ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎫᏔᏍᏲᏍᏗ ᎭᏫᎾᏗᏢ [[Victorian Era|Victorian]] [[England|ᎩᎵᏏᎯ]], ᎤᏅᏌ ᎨᏒᎩ derived ᎡᏆ ᏫᎬᏍᏗ ᏂᏛᎴᏅᏓ ᎯᎠ Bourbons. ᏅᎬᎪᎪᎩ-ᎠᏛᎯᏍᏙᏗ. ᏱᏓᏟᎶᏍᏔᏅ: 'Ferdinand Pichard', 'Reine ᏕᏍ Violettes'.
 ** '''ᎤᎦᎶᎬ''' - ᎯᎠ ᏄᎵᏍᏔᏅ ᏗᎦᎾᏗᏫᏍᏗ ᏔᎵ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᎠᎦᎾᏫᏗᏍᎩ ᎫᏔᏍᏲᏍᏗ ('Hume ᎤᏤᎵ ᎠᏕᎰᎯᏍᏗ ᎠᎦᎾᏫᏗᏍᎩ' ᎠᎴ 'ᎠᏣᏪᏐᎸᏍᏙᏗ' ᏓᎶᏂᎨ ᎤᎦᎶᎬ ᎦᏩᏒᎩ ᎠᎦᎾᏫᏗᏍᎩ') ᎬᏙᏗ ᏧᏓᎴᏅᏓ Bourbons ᎠᎴ Noisette ᎫᏔᏍᏲᏍᏗ. ᎾᏍᎩ ᏯᏛᎾ ᎤᏟ ᎢᎦᎢ ᏩᎾᎢ ᎬᎾᏬᏍᎬ ᏐᎢ ᎠᎦᏴᎵ ᎠᏫᏒᏅ ᎫᏔᏍᏲᏍᏗ (ᎤᎪᏗᏗ ᏄᏓᎷᎸᎾ ᎢᎬᏂᏏᏍᎩ ''R. gigantea'' ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᏌᏆᎸ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎫᏔᏍᏲᏍᏗ), ᎤᎦᎶᎬ ᎠᎴ ᏅᎬᎪᎪᎩ-ᎠᏛᎯᏍᏙᏗ ᎫᏔᏍᏲᏍᏗ ᎾᏍᎩ ᎤᏁᎳᎩ ᎤᎾᏤᎵ ᎠᎵᏍᏚᏟᏍᏗ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎪᎯᎸᎢ ᎤᎦᎶᎬ ᎦᏩᏒᎬ. ᏱᏓᏟᎶᏍᏔᏅ: 'ᎠᎨᏴ Hillingdon'.
 ** '''Bermuda "ᎤᏍᏆᏂᎪᏗ" ᎫᏔᏍᏲᏍᏗ''' - ᎤᎾᏓᏟᏌᎲ ᎯᎸᏍᎩ ᏔᎳᏚ "ᎠᏩᏛᏗ" ᎫᏔᏍᏲᏍᏗ Ꮎ ᎤᎭ ᏭᏪᏙᎢ ᎤᏛᏒ ᎭᏫᎾᏗᏢ [[Bermuda]] ᎾᏍᎩᎾᎢ ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ. ᎯᎠ ᎫᏔᏍᏲᏍᏗ ᎤᎭ ᎦᏛᎬᎢ ᏧᎬᏩᎶᏗ ᎠᎴ ᎤᏁᏉᏨ ᎾᏍᎩᎾᎢ ᎾᏍᎩ ᎠᏛᏏᏒ ᎫᏔᏍᏲᏍᏗ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ ᎠᎴ ᏴᎩ-ᎤᎦᎾᏭ ᎤᏔᏂᏗ ᎦᏙᎯ, ᎣᏂ ᏧᏩᎫᏛ ᎤᏅᏌ ᎠᎴ ᎦᎸᎳᏗᎨᏍᏗ ᏗᎦᏘᎸᏍᏗ ᎢᏧᎳ [[nematode]] ᎤᏲᏨᎯ ᎠᎴ ᎯᎠ [[black spot|fungal ᎥᏳᎩ]] Ꮎ ᎤᏢᎢᏍᏗᏍᎬ ᎫᏔᏍᏲᏍᏗ ᎥᎦᏔᎲᎢ ᎭᏫᎾᏗᏢ ᎤᏗᎴᎩ, ᎤᎯᏌᏛ ᎡᏍᎦᏂ, ᎠᎴ ᏰᎵᏇ ᎢᎬᏁᏗ ᎠᏥᎸᏍᎬ ᎭᏫᎾᏗᏢ ᎤᏗᎴᎩ ᎠᎴ ᎤᎯᏌᏛ ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ. ᎤᎪᏗᏗ ᎾᏍᎩ ᎯᎠ ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᏄᏓᎷᎸᎾ ᎠᎦᏴᎵ ᎠᏫᏒᏅ ᎫᏔᏍᏲᏍᏗ cultivars Ꮎ ᎤᎭ ᎢᏳᏃ ᏰᎵ ᎤᏬᎭᏒᎩ ᎠᏥᏄᏉᏫᏍᎬ ᏗᎦᎶᎪᏗ, ᎠᎴ ᏗᏁᎸᏗᏱ ᏂᏛᏓᎴᎲᏍᎩ. ᎤᏅᏌ ᎠᎴ "ᎤᏍᏆᏂᎪᏗ ᎫᏔᏍᏲᏍᏗ" ᎢᎬᏂᏏᏍᎩ ᎤᎾᏤᎵ "ᏗᏙᎳᎩ" ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᏚᎾᏙᎥ ᎤᎭ ᏭᏪᏙᎢ ᎤᎴᎾᎯᏛ. ᎧᏃᎮᎸᎯ ᎠᏃᏪᎵᏍᎬ Ꮎ ᎤᏅᏌ ᎠᎴ ᏓᎪᎥᎩ ᎤᎶᏐᏅ ᎯᎠ ᎤᏤᎵᎢ ᎯᎠ ᎠᏫᏒᏅ ᎭᏢᏃ ᎤᏅᏌ ᎨᏒᎩ rediscovered.
 ** '''ᏧᏓᎴᏅᏓ''' - ᎾᎿᎢ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎦᏲᎵ ᎠᏂᎦᏲᎵ ᏚᎾᎵᎪᏒ (ᏯᏛᎿ ᏥᏄᏍᏗ ᎦᏁᎳ, ᎤᎦᎾᏍᏛ ᎪᏍᏓᏱ) ᎠᎴ ᎢᎦᏛ ᏥᎵᎱ ᏚᎾᎵᎪᏒ ᎠᎦᏴᎵ ᎫᏔᏍᏲᏍᏗ (ᎠᏠᏯᏍᏗᏍᎩ Ayrshire, ᏥᎵᎱ ᎠᎦᎾᏫᏗᏍᎩ, Laevigata, Sempervirens, Noisette, Boursault, ᏥᎵᎱ ᎤᎦᎶᎬ, ᎠᎴ ᏥᎵᎱ Bourbon). ᎾᏍᎩ ᏚᎾᎵᎪᏒ ᎬᏙᏗ ᎢᏧᎳ ᏥᎵᎱ ᎠᎴ ᎦᎪᏘ ᏚᏙᏢᏒ ᎠᎴ ᎢᏳᏓᎵᎭ grouped ᎢᏧᎳ. 
-
 * '''ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎠᏫᏒᏅ ᎫᏔᏍᏲᏍᏗ''' - ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎫᏔᏍᏲᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎾᎥᏂᎨᏍᏙᏗ confusing ᎢᎬᏂᏏᏍᎩ ᎤᎪᏗᏗ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎫᏔᏍᏲᏍᏗ ᎤᎭ ᎠᎦᏴᎵ ᎠᏫᏒᏅ ᎫᏔᏍᏲᏍᏗ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎦᏌᏆᎸ ᎠᎴ ᎤᎾᏤᎵ ᎤᏙᏢᏒ varies ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᏣᏘ. ᎯᎠ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ ᏫᏚᏳᎪᏛ ᎾᏍᏋ ᎾᎥᎢ ᎤᏛᏏᏗᏒ ᎠᎴ ᎠᏛᎯᏍᏙᏗ ᎨᎦᏓᏅᏖᏗ, ᏯᏛᎿ ᏥᏄᏍᏗ "ᎡᏆ-flowered ᎦᎪᏘ", "ᎠᏍᏆᎵᏍᏗ, ᎡᏆ-flowered ᎦᎪᏘ",  "ᎤᏓᏂᏝᏅ-flowered", "ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎠᏍᏆᎵᏍᏗ", ᎠᎴ "ᎦᏙᎯ-ᎫᏢᏗ ᎬᏙᏗ-ᎠᏍᏆᎵᏍᏗ". ᎤᎪᏗᏗ ᎯᎠ ᎤᎪᏗᏗ ᎤᏂᎸᏉᏗ ᎪᎯᏊ ᎢᏴ ᏥᎩ cultivars ᏰᎵᏇ ᏱᏂᎬᏛᎾ ᎾᏍᏋ ᏓᏥᏲᎯᏎᎸ ᏌᏊ ᎾᏍᎩ ᎯᎠ ᏔᎵ ᏚᎾᏓᏟᏌᎲ:
 ** '''[[Hybrid Tea|ᏧᏠᎯᏍᏗ ᎤᎦᎶᎬ]]''' - ᎯᎠ favorite [[floristry|ᏗᎦᎶᎪᏗ']] ᎫᏔᏍᏲᏍᏗ, ᎬᏙᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ ᏌᏊ ᎾᎾᎢ ᎤᎪᏗᏗ ᎯᏍᎩ ᎠᎴ ᏑᏓᎵ ᎡᏆ ᎫᏔᏍᏲᏍᏗ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᏩᏂᎦᎸ, ᎯᎠ ᎫᏔᏍᏲᏍᏗ ᎬᏙᏗ ᎤᏂᎪᏗᏗ ᎠᏍᏓᏯ ᎠᏓᏁᎳᏅ petals ᎬᏙᏗ reflexed ᎠᎦᏚᏕᏍᏗ (ᎠᎪᏩᏛᏗ ᏗᏟᎶᏍᏔᏅ, ᏚᏳᎪᏛ). ᎤᏅᏌ ᎠᎴ favored ᎭᏫᎾᏗᏢ ᎤᏍᏗ ᎦᏁᎸ ᎭᏫᎾᏗᏢ ᎢᎬᏱ ᎦᏰᎯ ᏄᏍᏗᏓᏅ, ᎠᎴ ᎾᏍᎩᎾᎢ ᎠᎧᏁᏍᏗ ᎫᏔᏍᏲᏍᏗ.  ᏱᏓᏟᎶᏍᏔᏅ: '[[Peace (rose)|ᏅᏩᏙᎯᏯᏛ]]', 'ᎠᏍᎦᏯ. Lincoln'
 ** '''Floribunda''' - ᎫᏔᏍᏲᏍᏗ ᎢᏳᏓᎵᎭ ᎠᏂᎦᏲᎵ, ᎭᏫᎾᏗᏢ ᎡᏆ ᎤᏓᏂᏝᏅ ᏍᎪᎯ ᎠᎴ ᎤᏟ ᎢᎦᎢ (ᎢᏳᏓᎵᎭ ᎤᎪᏗᏗ ᎤᏟ ᎢᎦᎢ) ᎾᎿ ᎠᏂᏏᏴᏫᎭ ᎤᏩᏂᎦᎸ. ᎾᏍᎩ ᎯᎠ ᏫᏚᏳᎪᏛ ᎠᏓᏁᏗ ᎤᏟ ᎢᎦᎢ ᏧᏓᏃᏣᎵ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏂᏛᎴᏅᏓ ᎾᎿ ᎢᏴᎢ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎡᏆ ᎠᎵᏍᏕᎸᏗ ᎠᏓᏅᏖᏗ ᎭᏫᎾᏗᏢ ᏴᏫ ᎤᏁᏓᏍᏗ [[park|ᎠᏣᏪᏐᎸᏍᏙᏗ]] ᎠᎴ ᎤᏠᏱ ᎤᏜᏅᏛ.  ᏱᏓᏟᎶᏍᏔᏅ: 'ᎠᎵᏍᏓᏴᏗ ᎠᎨᏴ ᏧᏨᏓ ᏂᎨᏒᎾ', 'ᎤᏴᏢ', 'Tuscan ᏅᏙ ᎢᎦ ᎡᎯ'.
@@ -94,23 +93,23 @@ Between 100 and 150, [[List of Rosa species|ᎠᎪᏩᏛᏗ ᏙᎪᏩᎸ]]
 == ᎧᏃᎮᏍᎩ ==
 ᎯᎠ ᎫᏔᏍᏲᏍᏗ ᎤᎭ ᏂᎪᎯᎸᎢ ᏭᏪᏙᎢ ᏓᎬᏩᎶᏔᏅ ᎾᏍᎩᎾᎢ Ꮝ ᎤᏬᏚ ᎠᎴ ᎠᎵᏍᏚᏟᏍᏗ ᎠᎴ ᎤᎭ ᎦᏅᎯᏓ ᎧᏃᎮᏍᎩ ᏄᏍᏛ ᏗᎧᏃᏗ ᎠᎴ ᎦᏛᎬᎢ.  ᎯᎠ ᎯᎸᎯᏳᎢ [[Greeks|ᎠᏂᎪᎢ]] ᎠᎴ [[Ancient Rome|ᎶᎻ]] identified ᎯᎠ ᎫᏔᏍᏲᏍᏗ ᎬᏙᏗ ᎤᎾᏤᎵ goddesses ᎬᎨᏳᎢ ([[Aphrodite|ᎤᏬᏚ]] ᎠᎴ [[Venus|ᎠᏨᏍᏛ]]). ᎭᏫᎾᏗᏢ [[Rome|ᎶᎻ]] ᎨᏯᏔᎯ ᎫᏔᏍᏲᏍᏗ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎾᎿᏭᏅᎩ ᎾᎿ ᎯᎠ ᎠᏍᏚᏗ ᎧᏅᏑᎸ ᎭᏢᏃ ᎤᏕᎵᏛ ᎢᏳᏍᏗ ᏱᏓᏛᎿ ᎨᏒᎩ ᎧᏃᎮᎸᎯ. ᎯᎠ ᎯᎸᏍᎩ ᎢᎧᏁᏣ ''[[sub rosa|ᎠᏂᎦᏲᎵ rosa]]'', ᎠᎴ "ᎭᏫᎾᏗᏢ ᎯᎠ ᎫᏔᏍᏲᏍᏗ", ᎤᏅᏔᏂᏓᏍᏗ ᎠᏍᏆᏂᎪᏙᏗ secret—derived ᏂᏛᎴᏅᏓ ᎪᎯ ᎯᎸᎯᏳᎢ ᎶᎻ ᎠᎵᏏᎾᎯᏍᏙᏗ.
 
-ᎢᎬᏱ [[Christian|ᏧᎾᏁᎸᏗidentified]] ᎯᎠ ᎯᏍᎩ petals ᎯᎠ ᎫᏔᏍᏲᏍᏗ ᎬᏙᏗ ᎯᎠ ᎯᏍᎩ ᎠᏥᏐᏅᏅ [[Christ|ᎦᎶᏁᏛ]].  ᎦᎾᏆᏘᏍᏗ ᎪᎯ ᎪᎷᏩᏛᏗ, ᎤᎾᏤᎵ ᏗᏓᏘᏁᎯ ᎨᏒᎩ hesitant ᎠᏠᏯᏍᏙᏗ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮝ ᎤᎾᎵᎪᏒ ᎬᏙᏗ ᎶᎻ excesses ᎠᎴ ᎦᎵᏓᏍᏛ ᎬᏂᎨᏒ ᎢᎬᏁᏗ. ᎯᎠ ᎩᎦᎨ ᎫᏔᏍᏲᏍᏗ ᏥᏄᏍᏛᎩ ᏭᎵᏱᎶᎸ ᎠᏠᏯᏍᏔᏅᎯ ᏥᏄᏍᏗ ᏗᎬᏟᎶᏍᏙᏗ ᎯᎠ ᎩᎬ ᎯᎠ [[Christian|ᏧᎾᏁᎸᏗ]] ᏗᏁᎶᏗ ᎤᏍᏛᏗᏍᎩ.  ᎫᏔᏍᏲᏍᏗ ᎾᏍᎩ ᎾᏍᏇ ᎣᏂᏯᎨᏍᏙᏗ ᎤᎷᏨᎩ ᎾᏍᏋ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᎯᎠ ᎠᏛᏍᎩ Mary.
+ᎢᎬᏱ [[Christian|ᏧᎾᏁᎸᏗ]] identified ᎯᎠ ᎯᏍᎩ petals ᎯᎠ ᎫᏔᏍᏲᏍᏗ ᎬᏙᏗ ᎯᎠ ᎯᏍᎩ ᎠᏥᏐᏅᏅ [[Christ|ᎦᎶᏁᏛ]].  ᎦᎾᏆᏘᏍᏗ ᎪᎯ ᎪᎷᏩᏛᏗ, ᎤᎾᏤᎵ ᏗᏓᏘᏁᎯ ᎨᏒᎩ hesitant ᎠᏠᏯᏍᏙᏗ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮝ ᎤᎾᎵᎪᏒ ᎬᏙᏗ ᎶᎻ excesses ᎠᎴ ᎦᎵᏓᏍᏛ ᎬᏂᎨᏒ ᎢᎬᏁᏗ. ᎯᎠ ᎩᎦᎨ ᎫᏔᏍᏲᏍᏗ ᏥᏄᏍᏛᎩ ᏭᎵᏱᎶᎸ ᎠᏠᏯᏍᏔᏅᎯ ᏥᏄᏍᏗ ᏗᎬᏟᎶᏍᏙᏗ ᎯᎠ ᎩᎬ ᎯᎠ [[Christian|ᏧᎾᏁᎸᏗ]] ᏗᏁᎶᏗ ᎤᏍᏛᏗᏍᎩ.  ᎫᏔᏍᏲᏍᏗ ᎾᏍᎩ ᎾᏍᏇ ᎣᏂᏯᎨᏍᏙᏗ ᎤᎷᏨᎩ ᎾᏍᏋ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᎯᎠ ᎠᏛᏍᎩ Mary.
 
-ᎫᏔᏍᏲᏍᏗ ᎥᎦᏔᎲᎢ ᎤᎷᏨᎩ ᎾᎾᎯ Ꮝ ᎣᏤᎵ ᎭᏫᎾᏗᏢ [[Europe]] ᎭᏫᎾᏗᏢ ᎯᎠ 1800 ᎤᏤᎵ ᎬᏙᏗ ᎯᎠ ᎾᏛᏁᎸ ᏂᎦᏰᎵᏒ ᏂᎪᎯᎸ ᎠᏥᎸᏍᎬ ᎫᏔᏍᏲᏍᏗ ᏂᏛᎴᏅᏓ [[China|ᎠᎦᎾᏫᏗᏍᎩ]].  ᎾᎿᎢ ᎠᎴ ᎾᏊ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ varieties ᎫᏔᏍᏲᏍᏗ ᎤᏙᎷᏩᏛᏓ ᎾᏍᎩᎾᎢ ᎤᏥᎸᏒ ᎤᏙᏢᏒᎢ, ᏂᎬᎢ, ᎠᎵᏍᏚᏟᏍᏗ ᎠᎴ ᎢᏧᎳᎭ ᎾᏍᎩᎾᎢ ᎦᎷᎶᎩ ᏧᏣᏲᏍᏗ.
+ᎫᏔᏍᏲᏍᏗ ᎥᎦᏔᎲᎢ ᎤᎷᏨᎩ ᎾᎾᎯ Ꮝ ᎣᏤᎵ ᎭᏫᎾᏗᏢ [[Europe|ᏳᎳᏛ]] ᎭᏫᎾᏗᏢ ᎯᎠ 1800 ᎤᏤᎵ ᎬᏙᏗ ᎯᎠ ᎾᏛᏁᎸ ᏂᎦᏰᎵᏒ ᏂᎪᎯᎸ ᎠᏥᎸᏍᎬ ᎫᏔᏍᏲᏍᏗ ᏂᏛᎴᏅᏓ [[China|ᏓᎶᏂᎨᏍᏛ]].  ᎾᎿᎢ ᎠᎴ ᎾᏊ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ varieties ᎫᏔᏍᏲᏍᏗ ᎤᏙᎷᏩᏛᏓ ᎾᏍᎩᎾᎢ ᎤᏥᎸᏒ ᎤᏙᏢᏒᎢ, ᏂᎬᎢ, ᎠᎵᏍᏚᏟᏍᏗ ᎠᎴ ᎢᏧᎳᎭ ᎾᏍᎩᎾᎢ ᎦᎷᎶᎩ ᏧᏣᏲᏍᏗ.
 
 == ᎥᎦᏔᎲᎢ ==
 ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎯᎸᎯᏳᎢ ᏗᎬᏟᎶᏍᏙᏗ [[love|ᎬᎨᏳᎢ]] ᎠᎴ [[beauty|ᎤᏬᏚ]]. ᎯᎠ ᎫᏔᏍᏲᏍᏗ ᏥᏄᏍᏛᎩ ᎦᎸᏉᏗ ᏎᏍᏗ [[goddess|ᎬᎨᏳᎢes]] (ᎠᏠᏯᏍᏗᏍᎩ [[Isis|ᎤᏁᎳᏅᎯ]] ᎠᎴ [[Aphrodite|ᎤᏬᏚ]]), ᎠᎴ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᏗᎬᏟᎶᏍᏙᏗ [[the Virgin Mary|ᎯᎠ ᎠᏛᏍᎩ ᎺᎵ]]. ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᎵᏍᎨᏛ Ꮎ ᎯᎠ ᎧᏁᏨ ᎤᏅᏔᏂᏓᏍᏗ ᎩᎦᎨ ᎢᏳᏍᏗ ᎠᎴ ᎩᎦᎨ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏗᎦᏬᏂᎯᏍᏗ (ᏯᏛᎿ ᏥᏄᏍᏗ [[Romance languages|ᎪᎱᏍᏗ ᏄᏰᎳᏛᎾ ᏗᎦᏬᏂᎯᏍᏗ]], [[Greek language|ᎠᎪᎢ]], ᎠᎴ [[Polish language|ᎦᎶᏂᏗ]]).
 
-ᎯᎠ ᎫᏔᏍᏲᏍᏗ ᎨᏒᎢ ᎯᎠ [[national flower|ᎬᎾᏕᎾ ᎠᏥᎸᏍᎩ]] [[England]] ᎠᎴ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎠᎴᏂᏙᎲ ᎯᎠ ᏗᎬᏟᎶᏍᏙᏗ [[England Rugby]], ᎠᎴ ᎯᎠ [[Rugby Football Union|Rugby ᎠᎳᏍᎦᎸᏗ ᏗᏌᏊ ᎤᎾᎵᎪᎯ]].  ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎫᏔᏍᏲᏍᏗ [[Yorkshire]] ᎠᎴ [[Lancashire]] ᎭᏫᎾᏗᏢ [[England]] (ᎯᎠ ᎤᏁᎬ ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎩᎦᎨ ᎫᏔᏍᏲᏍᏗ ᎨᏥᎸᏉᏗᏳ) ᎠᎴ [[Alberta]] (ᎯᎠ ᎨᏯᏔᎯ ᎫᏔᏍᏲᏍᏗ), ᎠᎴ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎫᏔᏍᏲᏍᏗ ᏅᎩ ᎢᏧᎳ ᎠᏴ ᎧᏃᎮᎭ: [[Iowa]] ᎠᎴ [[North Dakota|ᎤᏴᏢ Dakota]] ([[Rosa arkansana|''R. arkansana'']]), [[Georgia (U.S. state)|Georgia]] (''[[Rosa laevigata|R. laevigata]]''), ᎠᎴ [[New York|ᏄᏯᎩ]] (''[[Rosa]]'' ᏂᎦᎥᏊ). [[Portland, Oregon]] ᏫᏚᏳᎪᏛ "ᎦᏚᎲᎢ ᎫᏔᏍᏲᏍᏗ" ᏄᎾᏛᏅ Ꮝ ᎾᎥᎢ, ᎠᎴ ᏗᏂᏂᏴ ᎾᏕᏘᏴᎯᏒ ᎫᏔᏍᏲᏍᏗ ᏓᎾᎵᏍᏓᏴᎲᏍᎬ. 
+ᎯᎠ ᎫᏔᏍᏲᏍᏗ ᎨᏒᎢ ᎯᎠ [[national flower|ᎬᎾᏕᎾ ᎠᏥᎸᏍᎩ]] [[England|ᎩᎵᏏᎯ]] ᎠᎴ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎠᎴᏂᏙᎲ ᎯᎠ ᏗᎬᏟᎶᏍᏙᏗ [[England|ᎩᎵᏏᎯ]] Rugby]], ᎠᎴ ᎯᎠ [[Rugby Football Union|Rugby ᎠᎳᏍᎦᎸᏗ ᏗᏌᏊ ᎤᎾᎵᎪᎯ]].  ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎫᏔᏍᏲᏍᏗ [[Yorkshire]] ᎠᎴ [[Lancashire]] ᎭᏫᎾᏗᏢ [[England|ᎩᎵᏏᎯ]] (ᎯᎠ ᎤᏁᎬ ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎩᎦᎨ ᎫᏔᏍᏲᏍᏗ ᎨᏥᎸᏉᏗᏳ) ᎠᎴ [[Alberta]] (ᎯᎠ ᎨᏯᏔᎯ ᎫᏔᏍᏲᏍᏗ), ᎠᎴ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎫᏔᏍᏲᏍᏗ ᏅᎩ ᎢᏧᎳ ᎠᏴ ᎧᏃᎮᎭ: [[Iowa|ᎠᏯᏩ]] ᎠᎴ [[North Dakota|ᏧᏴᏢ ᏓᎧᏓ]] ([[Rosa arkansana|''R. arkansana'']]), [[Georgia (U.S. state)|ᏣᏥᏱ]] (''[[Rosa laevigata|R. laevigata]]''), ᎠᎴ [[New York|ᏄᏯᎩ]] (''[[Rosa]]'' ᏂᎦᎥᏊ). [[Portland, Oregon|Portland, ᎤᏩᎦᏂ]] ᏫᏚᏳᎪᏛ "ᎦᏚᎲᎢ ᎫᏔᏍᏲᏍᏗ" ᏄᎾᏛᏅ Ꮝ ᎾᎥᎢ, ᎠᎴ ᏗᏂᏂᏴ ᎾᏕᏘᏴᎯᏒ ᎫᏔᏍᏲᏍᏗ ᏓᎾᎵᏍᏓᏴᎲᏍᎬ. 
 
 ᎫᏔᏍᏲᏍᏗ ᎠᎴ occasionally ᎯᎠ ᎠᎴᏅᏙᏗ ᎠᏤᎸ ᎢᎬᏁᏗ ᎾᏍᎩᎾᎢ [[rose windows|ᎫᏔᏍᏲᏍᏗ ᏗᏦᎳᏅ]], ᏯᏛᎿ ᏗᏦᎳᏅ comprising ᎯᏍᎩ ᎠᎴ ᏍᎪᎯ ᎢᎦᏛ (ᎯᎠ ᎯᏍᎩ petals ᎠᎴ ᎯᏍᎩ sepals ᎫᏔᏍᏲᏍᏗ) ᎠᎴ ᏎᏍᏗ ᏂᏛᏓᎴᎲᏍᎩ; ᏱᏂᎬᏛᎾ ᎤᎪᏗᏗ ᎠᏐᏩᏅᏅ ᎫᏔᏍᏲᏍᏗ ᏗᏦᎳᏅ ᎠᎴ ᎤᏣᏘ ᎤᏟ ᎢᎦᎢ ᎠᎲᏲᎵᏓ ᎠᎴ ᎨᏒᎩ ᏄᏓᎷᎸᎾ ᏚᎳᏏᏔᏅᎩ ᎠᎴᏅᏔᏅ ᎾᎿ ᎯᎠ ᎦᏆᏙᏗ ᎠᎴ ᏐᎢ ᏄᏍᏛ ᏗᎧᏃᏗ.
 
-ᎩᎦᎨ ᎫᏔᏍᏲᏍᏗ (ᎢᏳᏓᎵᎭ ᎠᏰᎲᎩ ᎭᏫᎾᏗᏢ ᎤᏬᏰᏂ) ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏗᎬᏟᎶᏍᏙᏗ [[socialism|ᏓᎳᏏᏛ]] ᎠᎴ [[social democracy|ᎠᎾᏓᏟᏏᏍᎬ ᎤᏂᏣᏘ ᎤᎾᏓᏅᏖᏗ]]; ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᏗᎬᏟᎶᏍᏙᏗ ᎾᎥᎢ ᎯᎠ [[Labour Party (UK)|ᎩᎵᏏ]] ᎠᎴ [[Irish Labour Party|ᎦᏁᎳ]] [[political party|Labour ᏚᎾᏓᏟᏌᎲ]], ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎾᎥᎢ ᎯᎠ ᎠᎦᎸᏥ, Spanish (Spanish ᎤᎾᎵᎪᏒ ᏧᎸᏫᏍᏓᏁᎯ' ᎤᎾᏓᏟᏌᎲ), Portuguese, Norwegian, Danish, Swedish, Finnish, Brazilian, Dutch ([[Pvda|Partij ᎠᏓᎴᏂᏍᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Arbeid]]) ᎠᎴ European ᎤᎾᎵᎪᏒ ᏚᎾᏓᏟᏌᎲ. ᎪᎯ ᎠᎴᏅᏙᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎩᎦᎨ ᎫᏔᏍᏲᏍᏗ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎠᎧᏁᏍᏗ ᎾᎥᎢ ᎯᎠ marchers ᎭᏫᎾᏗᏢ ᎯᎠ [[May 1968|ᎠᎾᏍᎬᏘ 1968]] ᎦᎳᏅᏛ ᏗᎦᏘᎸᏍᏗ ᎭᏫᎾᏗᏢ [[Paris|ᏨᏓᏓᏨᏍᏙᏗ]].
+ᎩᎦᎨ ᎫᏔᏍᏲᏍᏗ (ᎢᏳᏓᎵᎭ ᎠᏰᎲᎩ ᎭᏫᎾᏗᏢ ᎤᏬᏰᏂ) ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏗᎬᏟᎶᏍᏙᏗ [[socialism|ᏓᎳᏏᏛ]] ᎠᎴ [[social democracy|ᎠᎾᏓᏟᏏᏍᎬ ᎤᏂᏣᏘ ᎤᎾᏓᏅᏖᏗ]]; ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᏗᎬᏟᎶᏍᏙᏗ ᎾᎥᎢ ᎯᎠ [[Labour Party (UK)|ᎩᎵᏏ]] ᎠᎴ [[Irish Labour Party|ᎦᏁᎳ]] [[political party|Labour ᏚᎾᏓᏟᏌᎲ]], ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎾᎥᎢ ᎯᎠ ᎠᎦᎸᏥ, [[Spanish|ᏍᏆᏂ]] (ᏍᏆᏂ ᎤᎾᎵᎪᏒ ᏧᎸᏫᏍᏓᏁᎯ' ᎤᎾᏓᏟᏌᎲ), [[Portuguese|ᏉᏧᎦᎵ]], Norwegian, Danish, [[Swedish|ᎠᏂᎤᎦᎾᏍᏔ]], Finnish, [[Brazilian|ᏆᏏᎵᎢ]], Dutch ([[Pvda|Partij ᎠᏓᎴᏂᏍᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Arbeid]]) ᎠᎴ European ᎤᎾᎵᎪᏒ ᏚᎾᏓᏟᏌᎲ. ᎪᎯ ᎠᎴᏅᏙᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎩᎦᎨ ᎫᏔᏍᏲᏍᏗ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎠᎧᏁᏍᏗ ᎾᎥᎢ ᎯᎠ marchers ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎾᏍᎬᏘ 1968 ᎦᎳᏅᏛ ᏗᎦᏘᎸᏍᏗ ᎭᏫᎾᏗᏢ [[Paris|ᏨᏓᏓᏨᏍᏙᏗ]].
 
 === Victorian ᏄᏍᏛ ᏗᎧᏃᏗ ===
 [[File:Close_up_yellow_rose.jpg|thumb|right|ᏓᎶᏂᎨ ᎫᏔᏍᏲᏍᏗ: symbolizing ᎠᏲᎱᏍᎬ ᎬᎨᏳᎢ]]
 [[File:Small_Red_Rose.JPG|thumb|right|ᎩᎦᎨ ᎫᏔᏍᏲᏍᏗ: Deepest ᎬᎨᏳᎢ ᎠᎴ ᎪᎯᏳᎯ]]
-ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ [[Victorian era|Victorian]] "[[Language of flowers|ᎠᏂᏥᎸᏍᎩ ᎦᏬᏂᎯᏍᏗ]]", ᏄᏓᎴᎿᎥ colored ᎫᏔᏍᏲᏍᏗ ᎠᏂᏏᏴᏫᎭ ᎤᎭ ᎤᎾᏤᎵ ᎣᏤᎵ ᏄᏍᏛ ᏗᎧᏃᏗ ᎦᏛᎬᎢ:
+ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ [[Victorian era|Victorian]] "[[Language of flowers|ᎠᏂᏥᎸᏍᎩ ᎦᏬᏂᎯᏍᏗ]]", ᏄᏓᎴᎿᎥ ᎠᏑᏫᏒ ᎫᏔᏍᏲᏍᏗ ᎠᏂᏏᏴᏫᎭ ᎤᎭ ᎤᎾᏤᎵ ᎣᏤᎵ ᏄᏍᏛ ᏗᎧᏃᏗ ᎦᏛᎬᎢ:
 * '''ᎩᎦᎨ:''' ᎬᎨᏳᎢ 
 * '''ᎩᎦᎨ ᎢᏳᏍᏗ:''' ᎠᏓᏙᎵᏍᏗ, ᎠᏓᏙᎳᏍᏗᏍᎩ ᎤᎾᏒᎾᏍᏗᏱ ᎬᎨᏳᎢ
 * '''ᎤᎳᏏᎩ ᎩᎦᎨ ᎢᏳᏍᏗ:''' ᎤᎵᎮᎵᏣᏘ
@@ -163,7 +162,7 @@ Between 100 and 150, [[List of Rosa species|ᎠᎪᏩᏛᏗ ᏙᎪᏩᎸ]]
 
 == ᎠᎵᏍᏚᏟᏍᏗ ==
 {{main|Rose oil|ᎫᏔᏍᏲᏍᏗ ᎪᎢ}}
-ᎫᏔᏍᏲᏍᏗ ᎠᎵᏍᏚᏟᏍᏗ ᎠᎴ ᎪᏢᏅᎯ ᏂᏛᎴᏅᏓ [[attar of roses|ᎠᎵᏍᏚᏟᏍᏗ ᎫᏔᏍᏲᏍᏗ]] ᎠᎴ ᎫᏔᏍᏲᏍᏗ ᎪᎢ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏧᏠᎯᏍᏗ ᎤᎩᏓᎵ [[essential oil|ᎤᎵᏍᎨᏛ ᎪᎢotsel]] igvnelv ᎾᎥᎢ ᎠᏥᎸ ᎦᏌᏙᏯᏍᎩ-ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎯᎠ ᎡᎯᏍᏛ petals ᎫᏔᏍᏲᏍᏗ. ᎯᎠ technique originated ᎭᏫᎾᏗᏢ [[Iran|Persia]] (ᎯᎠ ᎧᏁᏨ ᎫᏔᏍᏲᏍᏗ ᎤᏩᏌᏊ ᎨᏒᎢ ᏂᏛᎴᏅᏓ Persian) ᎾᎯᏳᎢ ᎠᏰᏍᏛᏗ ᏗᎬᏩᎶᏒ [[Arabia|ᎠᎵᏍᏚᏟᏍᏗ]] ᎠᎴ [[India|ᎠᎹ ᎦᏄᎪᎬ]], ᎠᎴ ᎢᏳᏓᎵᎭ ᎬᏩᏚᏫᏛ 70% 80% ᎠᏛᎯᏍᏙᏗ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎯᎠ [[Rose Valley|ᎫᏔᏍᏲᏍᏗ ᎤᎨᏓᎵᏴ]] ᎾᎥᏂᎨ [[Kazanluk]] ᎭᏫᎾᏗᏢ [[Bulgaria]], ᎬᏙᏗ ᎢᎦᏛ ᎠᏛᎯᏍᏙᏗ ᎭᏫᎾᏗᏢ [[Qamsar]] ᎭᏫᎾᏗᏢ [[Iran]] ᎠᎴ [[Germany]]. ᎯᎠ [[Kaaba]] ᎭᏫᎾᏗᏢ [[Mecca]] ᎨᏒᎢ ᎾᏕᏘᏴᎯᏒ ᎠᎬᏍᏉᎥ ᎾᎥᎢ ᎯᎠ Iranian ᎫᏔᏍᏲᏍᏗ ᎠᎹ ᏂᏛᎴᏅᏓ Qamsar. ᎭᏫᎾᏗᏢ Bulgaria, Iran ᎠᎴ Germany, ᎩᎦᎨ ᎫᏔᏍᏲᏍᏗ (''Rosa damascena'' 'Trigintipetala') ᎠᎴ ᎬᏔᏅᎯ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎦᎸᏥ ᎫᏔᏍᏲᏍᏗ ᎪᎢ ᏗᎦᎸᏫᏍᏓᏁᏗ ''Rosa centifolia'' ᎨᏒᎢ ᎬᏔᏅᎯ. ᎯᎠ ᎪᎢ, ᎤᏔᏂᏗ ᎦᏙᎯ ᏓᎶᏂᎨ ᎠᎴ ᏓᎶᏂᎨ-ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎭᏫᎾᏗᏢ ᏗᎧᏃᏗ, ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎤᏯᏅᎲ 'ᎫᏔᏍᏲᏍᏗ ᎤᏙᎯᏳᎯᏯ' ᎪᎢ ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᏂᏛᎴᏅᏓ ᎠᎹ ᏅᎬᎪᏔᏅᎯ. ᎯᎠ ᏄᏓᎨᏒ ᎪᎢ ᎠᎲᏏᏓᏍᏗ ᎨᏒᎢ ᎬᏩᏚᏫᏛ ᏌᏊ ᏦᎢ—ᎯᏍᎩ ᏌᏊ ᏑᏓᎵ—ᎯᏍᎩ ᎯᎠ ᏄᏓᎨᏒ ᎯᎠ ᎫᏔᏍᏲᏍᏗ; ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎬᏩᏚᏫᏛ 2,000 ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᏛᎯᏍᏙᏗ ᏌᏊ gram ᎪᎢ.
+ᎫᏔᏍᏲᏍᏗ ᎠᎵᏍᏚᏟᏍᏗ ᎠᎴ ᎪᏢᏅᎯ ᏂᏛᎴᏅᏓ [[attar of roses|ᎠᎵᏍᏚᏟᏍᏗ ᎫᏔᏍᏲᏍᏗ]] ᎠᎴ ᎫᏔᏍᏲᏍᏗ ᎪᎢ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏧᏠᎯᏍᏗ ᎤᎩᏓᎵ [[essential oil|ᎤᎵᏍᎨᏛ ᎪᎢ]] ᎣᏤᎵ ᎢᎬᏁᎸ ᎾᎥᎢ ᎠᏥᎸ ᎦᏌᏙᏯᏍᎩ-ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎯᎠ ᎡᎯᏍᏛ petals ᎫᏔᏍᏲᏍᏗ. ᎯᎠ technique originated ᎭᏫᎾᏗᏢ [[Iran|Persia]] (ᎯᎠ ᎧᏁᏨ ᎫᏔᏍᏲᏍᏗ ᎤᏩᏌᏊ ᎨᏒᎢ ᏂᏛᎴᏅᏓ Persian) ᎾᎯᏳᎢ ᎠᏰᏍᏛᏗ ᏗᎬᏩᎶᏒ [[Arabia|ᎠᎵᏍᏚᏟᏍᏗ]] ᎠᎴ [[India|ᎢᏅᏗᎾ]], ᎠᎴ ᎢᏳᏓᎵᎭ ᎬᏩᏚᏫᏛ 70% 80% ᎠᏛᎯᏍᏙᏗ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎯᎠ [[Rose Valley|ᎫᏔᏍᏲᏍᏗ ᎤᎨᏓᎵᏴ]] ᎾᎥᏂᎨ [[Kazanluk]] ᎭᏫᎾᏗᏢ [[Bulgaria]], ᎬᏙᏗ ᎢᎦᏛ ᎠᏛᎯᏍᏙᏗ ᎭᏫᎾᏗᏢ [[Qamsar]] ᎭᏫᎾᏗᏢ [[Iran]] ᎠᎴ [[Germany|ᎠᏂᏛᏥ]]. ᎯᎠ [[Kaaba]] ᎭᏫᎾᏗᏢ [[Mecca]] ᎨᏒᎢ ᎾᏕᏘᏴᎯᏒ ᎠᎬᏍᏉᎥ ᎾᎥᎢ ᎯᎠ Iranian ᎫᏔᏍᏲᏍᏗ ᎠᎹ ᏂᏛᎴᏅᏓ Qamsar. ᎭᏫᎾᏗᏢ [[Bulgaria]], Iran ᎠᎴ [[Germany|ᎠᏂᏛᏥ]], ᎩᎦᎨ ᎫᏔᏍᏲᏍᏗ (''Rosa damascena'' 'Trigintipetala') ᎠᎴ ᎬᏔᏅᎯ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎦᎸᏥ ᎫᏔᏍᏲᏍᏗ ᎪᎢ ᏗᎦᎸᏫᏍᏓᏁᏗ ''Rosa centifolia'' ᎨᏒᎢ ᎬᏔᏅᎯ. ᎯᎠ ᎪᎢ, ᎤᏔᏂᏗ ᎦᏙᎯ ᏓᎶᏂᎨ ᎠᎴ ᏓᎶᏂᎨ-ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎭᏫᎾᏗᏢ ᏗᎧᏃᏗ, ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎤᏯᏅᎲ 'ᎫᏔᏍᏲᏍᏗ ᎤᏙᎯᏳᎯᏯ' ᎪᎢ ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᏂᏛᎴᏅᏓ ᎠᎹ ᏅᎬᎪᏔᏅᎯ. ᎯᎠ ᏄᏓᎨᏒ ᎪᎢ ᎠᎲᏏᏓᏍᏗ ᎨᏒᎢ ᎬᏩᏚᏫᏛ ᏌᏊ ᏦᎢ—ᎯᏍᎩ ᏌᏊ ᏑᏓᎵ—ᎯᏍᎩ ᎯᎠ ᏄᏓᎨᏒ ᎯᎠ ᎫᏔᏍᏲᏍᏗ; ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎬᏩᏚᏫᏛ 2,000 ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᏛᎯᏍᏙᏗ ᏌᏊ gram ᎪᎢ.
 
 ᎯᎠ ᏄᎬᏫᏳᏒ ᏑᏓᎴᎩ ᎠᎵᏍᏚᏟᏍᏗ ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎯᎠ ᎠᎵᏍᏚᏟᏍᏗ [[alcohol|ᎠᎹ ᎠᏑᏴᏗ ᏫᏍᎩ]] [[geraniol]], ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎯᎠ ᎠᎦᏛᏗ ᏄᏍᏛ ᏎᏍᏗ C<sub>10</sub>H<sub>18</sub>O ᎠᎴ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᏎᏍᏗ CH<sub>3</sub>.C[CH<sub>3</sub>]:CH.CH<sub>2</sub>.CH<sub>2</sub>.C[CH<sub>3</sub>]:CH.CH<sub>2</sub>OH ᎠᎴ l-[[citronellol]]; ᎠᎴ ᎫᏔᏍᏲᏍᏗ ᎠᏜ, odorless [[paraffin|ᎪᎢ]].
 
@@ -175,8 +174,8 @@ Between 100 and 150, [[List of Rosa species|ᎠᎪᏩᏛᏗ ᏙᎪᏩᎸ]]
 * [[David Austin]] ("ᎩᎵᏏ" ᎫᏔᏍᏲᏍᏗ)
 * [[Peter Beales]] 
 * [[Paul Chessum]]
-* [[Joséphine de Beauharnais|Joséphine ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Beauharnais]]
-* [[Griffith Buck|Griffith ᏧᎧᏅᏍᏕᎾ ᎠᏫ]], ᏗᏕᎶᏆᏍᎩ ᏗᎦᎶᎪᏗ ᎾᎾᎢ Iowa ᎤᏔᏂᏗ ᎦᏙᎯ ᏗᏕᎶᏆᏍᏗ ᏂᏛᎴᏅᏓ 1948 1985, hybridized ᎾᎥᏂᎨᏍᏗ 90 ᎫᏔᏍᏲᏍᏗ varieties. ᏧᎧᏅᏍᏕᎾ ᎠᏫ ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎤᎾᏅᏛ ᎾᏍᎩᎾᎢ ᎥᏳᎩ ᏗᎦᏘᎸᏍᏗ ᎠᎴ ᎪᎳ hardiness.
+* [[Joséphine de Beauharnais]]
+* [[Griffith Buck]], ᏗᏕᎶᏆᏍᎩ ᏗᎦᎶᎪᏗ ᎾᎾᎢ Iowa ᎤᏔᏂᏗ ᎦᏙᎯ ᏗᏕᎶᏆᏍᏗ ᏂᏛᎴᏅᏓ 1948—1985, hybridized ᎾᎥᏂᎨᏍᏗ 90 ᎫᏔᏍᏲᏍᏗ varieties. ᏧᎧᏅᏍᏕᎾ ᎠᏫ ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎤᎾᏅᏛ ᎾᏍᎩᎾᎢ ᎥᏳᎩ ᏗᎦᏘᎸᏍᏗ ᎠᎴ ᎪᎳ hardiness.
 * [[Conard-Pyle Co.|Conard-Pyle ᎢᏗᎦᏘᎭ.]] (ᏃᏈᏏ ᎫᏔᏍᏲᏍᏗ)
 * [[Jules Gravereaux]]
 * [[Jean-Baptiste Guillot]]
@@ -184,7 +183,7 @@ Between 100 and 150, [[List of Rosa species|ᎠᎪᏩᏛᏗ ᏙᎪᏩᎸ]]
 * [[Jean Pernet, père]] 
 * [[Joseph Pernet-Ducher|ᏧᏳᎪᏗᎭ Pernet-Ducher]]
 
-ᎭᏫᎾᏗᏢ ᎯᎠ [[United Kingdom|UK]], ᏄᏓᎴᎿᎥ ᎢᎦᏛᎭ ᎯᎠ [[NCCPG National Plant Collection|ᎬᎾᏕᎾ ᎤᏓᏂᏝᏅ]] ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎾᎥᎢ [[David Austin]], [[Peter Beales]], ᎠᎴ ᎯᎠ [[Royal National Rose Society|ᎠᏥᎸᏉᏗ ᏴᏫ ᎬᎾᏕᎾ ᎫᏔᏍᏲᏍᏗ ᎤᎾᏙᏢᎯ]], ᎬᏙᏗ [[Mottisfont Abbey]] ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎤᏓᏂᏝᏅ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-1900 ᎦᎪᏘ ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎯᎠ [[University of Birmingham Botanic Garden|ᏗᏕᎶᏆᏍᏗ  Birmingham ᎦᎪᏘ ᎠᏫᏒᏅ]] ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎤᏓᏂᏝᏅ ᎤᏠᏯᏍᏔᏅ 'ᎯᎠ ᎧᏃᎮᏍᎩ ᎯᎠ European ᎫᏔᏍᏲᏍᏗ'.
+ᎭᏫᎾᏗᏢ ᎯᎠ [[United Kingdom|ᎩᎵᏏᎯ]], ᏄᏓᎴᎿᎥ ᎢᎦᏛᎭ ᎯᎠ [[NCCPG National Plant Collection|ᎬᎾᏕᎾ ᎤᏓᏂᏝᏅ]] ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎾᎥᎢ [[David Austin]], [[Peter Beales]], ᎠᎴ ᎯᎠ [[Royal National Rose Society|ᎠᏥᎸᏉᏗ ᏴᏫ ᎬᎾᏕᎾ ᎫᏔᏍᏲᏍᏗ ᎤᎾᏙᏢᎯ]], ᎬᏙᏗ [[Mottisfont Abbey]] ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎤᏓᏂᏝᏅ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-1900 ᎦᎪᏘ ᎫᏔᏍᏲᏍᏗ ᎠᎴ ᎯᎠ [[University of Birmingham Botanic Garden|ᏗᏕᎶᏆᏍᏗ  Birmingham ᎦᎪᏘ ᎠᏫᏒᏅ]] ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎤᏓᏂᏝᏅ ᎤᏠᏯᏍᏔᏅ 'ᎯᎠ ᎧᏃᎮᏍᎩ ᎯᎠ European ᎫᏔᏍᏲᏍᏗ'.
 
 == ᏫᏓᏎᎸᎢ ==
 {{commons|Rosa|ᎫᏔᏍᏲᏍᏗ}}
