--- a/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
+++ b/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
@@ -119,6 +119,7 @@
 
 == Ꮞ ==
 * [[Walnut|ᏎᏗ]] - ''[[Juglandaceae]]''
+:* [[Black walnut|ᎬᎿᎨ ᏎᏗ]] - ''[[Juglans nigra]]''
 * [[Pear|ᏎᏗ ᎢᏳᏍᏗ ᏒᎦᏔ]] - ''[[Pyrus]]''
 * [[Corn|ᏎᎷ]] <ref name=h232/> - ''[[Zea mays]]''
 * [[Sage|ᏎᏥ ᏒᏟ]] <ref name=h232/> - ''[[Salvia]]''
