--- a/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
+++ b/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
@@ -397,6 +397,15 @@ For the coordinating committee,<br />
 [[m:User:Robertmharris|Robert Harris]]
 <!-- EdwardsBot 0089 -->
 
+==Language support group for Cherokee==
+The Wikimedia Foundation has brought together a new team of developers who are dedicated to language support. This team is to support all the languages and consequently it is not realistic to expect that the team members can provide proper support for your language. It is for this reason that we are looking for volunteers who will make up a [[:translatewiki:language support team|language support team]]. 
+
+This language support team will be asked to provide us with information about their language. Such information may need to be provided either to us or on a website that we will indicate to you. Another activity will be to test software that will likely have an effect on the running of the MediaWiki software. We are looking for people who clearly identify their ability. Formal knowledge is definitely appreciated.
+
+As much of the activity will be concentrated on [[:translatewiki:Main Page|translatewiki.net]], it will be a plus when team members know how to localise at translatewiki.net.
+Thanks, [[User:Gmeijssen|Gmeijssen]] 07:58, 17 October 2011 (UTC)
+
+
 [[ang:Ƿicipǣdia:Þorpes Ƿiella]]
 [[de:Wikipedia:Fragen zur Wikipedia]]
 [[fi:Wikipedia:Kahvihuone]]
