--- a/ᎠᏍᎩᏘᏍᏗ.mw
+++ b/ᎠᏍᎩᏘᏍᏗ.mw
@@ -222,6 +222,7 @@ Combining Hobson ᎤᏤᎵ activation ᏧᏓᎴᎾᎢ ᏄᏍᏗᏓᏅ ᎬᏙᏗ 
 * [http://dreams.valasearch.com Dream Interpretation] ᏄᏍᏛ ᎧᏃᎮᏗ ᏗᏍᎩᏘᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ ᎧᏃᎮᏍᎩ, ᏱᏓᏛᎾ ᎤᏙᎯᏳ ᎬᏩᏚᏫᏛ ᏗᏍᎩᏘᏍᏗ, ᎧᏁᎢᏍᏙᏗ, ᎠᏍᎩᏘᏍᏗ ᏅᎠᏥᏯᏃᏗ, ᎠᎴ ᎠᏍᎩᏘᏍᏗ ᎪᎷᏩᏛᏗ.
 * [http://veda.harekrsna.cz/encyclopedia/dreams.htm Dreams and the Vedanta-sutra (Vedic/Hindu tradition)]
 * [http://www.thedreamexplorer.com The Dream Explorer] Online resource ᎠᎴ ᎾᎥ ᏄᎾᏓᎸ ᎾᏍᎩᎾᎢ ᎤᎿᎸ ᎠᏍᎦᏯ ᎠᎴ ᎠᏨᏍᏛ ᎤᎿᎸ ᎠᏍᎦᏯ.
+* [http://www.ruyatabirlerievi.com Rüya Tabirleri]
 * [http://www.dreammoods.com/dreamdictionary Dream Moods Dictionary] Online ᏗᏕᏠᏆᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎠᏁᎳᏙᏗ ᏗᏍᎩᏘᏍᏗ.
 * [http://www.dreamstell.net DreamsTell!] ᏗᏕᏠᏆᏍᏙᏗ 'ᎯᎸᎯᏳᎢ' ᎠᏍᎩᏘᏍᏗ ᏗᎬᏟᎶᏍᏙᏗ ᎠᎴ ᎪᎷᏩᏛᏗ
 * [http://www.experienceproject.com/dreams.php Dream Interpretation] ᎠᏍᎩᏘᏍᏗ sharing ᎠᎴ ᎧᏃᎮᎸᏗ resource
