/* ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ */ {{Commons|Language}}

--- a/ᎦᏬᏂᎯᏍᏗ.mw
+++ b/ᎦᏬᏂᎯᏍᏗ.mw
@@ -163,6 +163,8 @@ Where do Wittgenstein and Quine argue this? [[Philosopher]]s such as [[Ludwig Wi
 * [http://polyglottery.wordpress.com Learning Global Languages]
 * [http://www2.ignatius.edu/faculty/turner/languages.htm The World's Most Widely Spoken Languages]
 * [http://www.watchtower.org/library/g/2000/8/8/article_01.htm "Languages — Bridges and Walls to Communication"], ᏂᏛᎴᏅᏓ ''[[Awake!|ᎤᏰᏨᎩ!]]'' ᎪᏪᎵ ᏗᎪᎵᏰᏗ
+{{Commons|Language}}
+
 <!-- language -->
 
 [[Category:ᎦᏬᏂᎯᏍᏗ| ]]
