--- a/ᏍᏏᏉᏯ.mw
+++ b/ᏍᏏᏉᏯ.mw
@@ -1,5 +1,5 @@
 [[File:Sequoyah.jpg|thumb|right|250px|''Se-quo-yah'', ᎥᏓᏓᎫᏴᎡᏗᏱ, [[ᎠᏓᏕᏲᎲᏍᎩ]] ᏂᏛᎴᏅᏓ ''ᎠᏴᏫᏯ ᎠᏂᎳᏍᏓᎸ'', McKinney ᎠᎴ ᎦᎳᏅᏛ, [[1856]]. ᎪᎯ ᎠᏓᏕᏲᎲᏍᎩ ᎨᏒᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᏗᏓᏟᎶᏍᏔᏅ ᎦᎶᏁᏛ ᎾᎥᎢ [[ᏣᎵ ᏥᏍᏆ ᎤᎬᏫᏳᎯ]] ᏂᏛᎴᏅᏓ ᎥᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ [[1828]].]]
-'''ᏏᏉᏯ''' (ᏍᏏᏉᏯ ''Ssiquaya'' ᎭᏫᎾᏗᏢ [[ᏣᎳᎩ]]) (ca. 1767 - ᎫᏰᏉᏂ ᎠᎴ ᎦᎶᏂ 1843), ᎤᎾᏅᏛ ᏥᏄᏍᏗ '''ᏣᏥ ᎢᏰᎵᏍᏗ''', '''ᎠᏓᏩᏛᎯᏙᎯ''' ᎠᎴ '''ᎠᎴᏂᏙᎲ''', ᏥᏄᏍᏛᎩ [[ᏣᎳᎩ]] ᎠᏕᎸ ᎤᏁᎬ ᎠᏥᏅᏏᏓᏍᏗ ᎦᎪ ᎪᎷᏩᏛᏗ ᎯᎠ [[ᏣᎳᎩ ᏗᎪᏪᎵ]], ᎯᎠ ᎢᏴ ᎠᏓᏠᎯᏍᏗ ᎾᏍᎩ ᎠᏍᎦᏯ ᏀᎾᎢ ᏀᎾ ᎯᎠ [[ᏙᎪᏩᎸ ᎪᎷᏩᏛᏗ ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ]]. 
+'''ᏏᏉᏯ''' (ᏍᏏᏉᏯ ''Ssiquoya'' ᎭᏫᎾᏗᏢ [[ᏣᎳᎩ]]) (ca. 1767 - ᎫᏰᏉᏂ ᎠᎴ ᎦᎶᏂ 1843), ᎤᎾᏅᏛ ᏥᏄᏍᏗ '''ᏣᏥ ᎢᏰᎵᏍᏗ''', '''ᎠᏓᏩᏛᎯᏙᎯ''' ᎠᎴ '''ᎠᎴᏂᏙᎲ''', ᏥᏄᏍᏛᎩ [[ᏣᎳᎩ]] ᎠᏕᎸ ᎤᏁᎬ ᎠᏥᏅᏏᏓᏍᏗ ᎦᎪ ᎪᎷᏩᏛᏗ ᎯᎠ [[ᏣᎳᎩ ᏗᎪᏪᎵ]], ᎯᎠ ᎢᏴ ᎠᏓᏠᎯᏍᏗ ᎾᏍᎩ ᎠᏍᎦᏯ ᏀᎾᎢ ᏀᎾ ᎯᎠ [[ᏙᎪᏩᎸ ᎪᎷᏩᏛᏗ ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ]].
 
 ᎾᎥ ᏔᎾᏏ ᏛᏍᎩᏥ ᏙᏧᏙᎥ ᎦᏚᎲ, ᎤᎿ ᎨᏎ ᎤᎨᏓᎵᏴ ᏕᎨᎦᏨᏍᏔᏁ ᎠᏣᎳᎩ ᎤᎬᏩᏳᎯ
 ᎤᏪᏥ, ᏭᏖ, ᏃᏊᎴ ᏅᏕᏂᎵ ᎩᏍᏗ. ᏗᎦᏁᎦ ᏗᎦᎾᏕᎩ ᎨᏎ ᏅᏕᏂᎵ. ᏭᏕᏁ ᏏᏉᏯ ᎦᎵᏆᏍᎪ
@@ -35,22 +35,22 @@ Lowery, ᏙᏱᏗᏝ ᏭᏎᎮᎴ ᎤᏪᏅᏍᏗ ᎠᏲᎦ, ᏅᏊ ᏅᏛᏛᏁ
 ᎯᎠ ᏗᏙᎳᎩ ᏀᎾᎢ ᎠᎴ ᎢᏳ ᎢᎪᎯ ᏏᏉᏯ ᎤᏤᎵ ᎤᏕᏅ ᎤᎾᏅᏛ, ᎣᏂ ᏧᏩᎫᏛ Ꮭ ᎪᏪᎳᏅᎯ ᎪᏪᎸ ᎬᏂᎨᏒ ᏂᏚᏍᏗ. ᎠᏩᏒᏗᏱ ᎠᎴ ᏄᏍᏗᏓᏅ ᎾᎥᎢ ᎪᏪᎵᏍᎩ ᏀᎾᎢ ᎤᏤᎵ ᎤᏕᏅ ᎾᎾᎢ ᎢᎦᏛ ᎪᏍᏓᏱ ᎠᏰᎵ 1760 ᎠᎴ 1776. ᏥᏄᏍᏗ ᎾᏍᎩᎾᎢ ᎤᏤᎵ ᏀᎾᎢ ᎤᏕᏅ, ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᎪᏗᏗ ᏄᏓᎷᎸᎾ ᏀᎾ ᎯᎸᏢ ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᎦᎾᏭ Atlantic]] ᎠᎴ [[ᎤᎦᎾᏭ ᎠᏰᎵ]] ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ [[ᏌᏊᎭ ᎧᏃᎮᎭ]]. [[ᏧᏠᎯᏍᏗ Mooney]], ᏧᏓᏃᏣᎵ ᎠᎴ ᎪᏪᎵᏍᎩ ᎯᎠ ᏣᎳᎩ ᏴᏫ, ᎧᏁᎢᏍᏔᏅ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎭᏫᎾᏗᏢ ᎧᏁᎬᎢ Ꮎ ᏏᏉᏯ ᎤᏂᏩᏒ ᎤᏤᎵ ᎢᎬᏱ ᏧᏕᏘᏴᏓ ᎬᏙᏗ ᎤᏤᎵ ᎤᏂᏥ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏗ ᎦᏚᎲ [[Tuskegee]], ᏖᎾᏏ.
 
 ᎯᎠ ᏚᏙᎥ ᏏᏉᏯ ᎠᎴ Sikwâ'yǐ ᎨᏒᎢ ᎤᏬᎯᏳᏅ ᎾᏍᏋ ᏗᎫᎪᏔᏅ ᏂᏛᎴᏅᏓ ᎯᎠ ᏣᎳᎩ ᎧᏁᏨ ᏏᏆ ''ᏏᏆ'' ᎦᏛᎬᎢ '[[ᏏᏆ]]'. ᎪᎯ ᎨᏒᎢ ᎢᏳᏍᏗᏊ ᏩᏎᎸᎯ ᎠᏛᏍᎩ ᎤᏙᏢᏒ ᎠᎴ ᎣᏂᏯᎨᏍᏙᏗ ᎠᏥᏐᏅᏅ Ꮎ ᎠᎦᏍᎦᏂ ᏏᏉᏯ [[ᏰᎵᏆ ᎢᏯᏛᏁᏗ]]. 
-ᎤᏤᎵ ᎤᏂᏥ, ᎾᏍᎩ ᎨᏒᎢ ᎤᎾᏅᏛ Ꮎ ᎾᏍᎩ ᎠᎨᏴ ᏥᏄᏍᏛᎩ ᏣᎳᎩ ᎠᎴ ᎤᏙᏣᎸᏅ ᎯᎠ [[ᎦᎶᏁᏗ ᏧᏂᏴᏫ]]. Mooney ᎧᏃᎮᎭ Ꮎ ᎾᏍᎩ ᎠᎨᏴ ᏥᏄᏍᏛᎩ ᎯᎠ ᎤᏓᏠᎩᏴ ᏣᎳᎩ [[ᎤᎬᏫᏳᎯ]]. ᎤᏤᎵ ᎠᏓᏙᏓ ᏥᏄᏍᏛᎩ ᎢᏳᏍᏗᏊ [[ᎤᏁᎬ]] ᎠᎴ ᎢᎦᏛ-ᎤᏁᎬ ᎠᎴ ᎢᎦᏛ [[ᎾᏰᎯᏯ ᏴᏩᏁᎬ]]. ᏙᏧᏓᎴᏅ ᏚᏓᎴᎿᎥ ᏥᏄᏍᏗ ᎯᎠ ᏗᏙᎳᎩ ᎤᏠᏱ ᏏᏉᏯ ᎤᏤᎵ ᎠᏓᏙᏓ, ᎠᎴ ᎤᎪᏗᏗ (ᎠᏠᏯᏍᏗᏍᎩ Mooney) ᎧᏁᎢᏍᏙᏗ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᏥᏄᏍᏛᎩ ᏰᎵᏊ ᏱᎩ [[ᎤᏭᏯᏔᏅ ᏓᎾᏘᏍᎩ]] ᎠᎴ ᎯᎠ ᎤᏪᏥ [[Christopher Gist|Christopher ᎠᎴᏂᏙᎲ]], [[ᎠᏯᏩᏍᏗ]] ᎾᏍᎩᎾᎢ [[ᏣᏥ ᏬᏏᏓᏂ]]. 
+ᎤᏤᎵ ᎤᏂᏥ, ᎾᏍᎩ ᎨᏒᎢ ᎤᎾᏅᏛ Ꮎ ᎾᏍᎩ ᎠᎨᏴ ᏥᏄᏍᏛᎩ ᏣᎳᎩ ᎠᎴ ᎤᏙᏣᎸᏅ ᎯᎠ [[ᎦᎶᏁᏗ ᏧᏂᏴᏫ]]. Mooney ᎧᏃᎮᎭ Ꮎ ᎾᏍᎩ ᎠᎨᏴ ᏥᏄᏍᏛᎩ ᎯᎠ ᎤᏓᏠᎩᏴ ᏣᎳᎩ [[ᎤᎬᏫᏳᎯ]]. ᎤᏤᎵ ᎠᏓᏙᏓ ᏥᏄᏍᏛᎩ ᎢᏳᏍᏗᏊ [[ᎤᏁᎬ]] ᎠᎴ ᎢᎦᏛ-ᎤᏁᎬ ᎠᎴ ᎢᎦᏛ [[ᎾᏰᎯᏯ ᏴᏩᏁᎬ]]. ᏙᏧᏓᎴᏅ ᏚᏓᎴᎿᎥ ᏥᏄᏍᏗ ᎯᎠ ᏗᏙᎳᎩ ᎤᏠᏱ ᏏᏉᏯ ᎤᏤᎵ ᎠᏓᏙᏓ, ᎠᎴ ᎤᎪᏗᏗ (ᎠᏠᏯᏍᏗᏍᎩ Mooney) ᎧᏁᎢᏍᏙᏗ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᏥᏄᏍᏛᎩ ᏰᎵᏊ ᏱᎩ [[ᎤᏭᏯᏔᏅ ᏓᎾᏘᏍᎩ]] ᎠᎴ ᎯᎠ ᎤᏪᏥ [[Christopher Gist|Christopher ᎠᎴᏂᏙᎲ]], [[ᎠᏯᏩᏍᏗ]] ᎾᏍᎩᎾᎢ [[ᏣᏥ ᏬᏏᏓᏂ]].
 
 ᎯᎠ ᏯᏛᎾ ᎤᏙᎯᏳ Ꮎ ᏏᏉᏯ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎧᏁᎬ [[ᎩᎵᏏ (ᎦᏬᏂᎯᏍᏗ)|ᎩᎵᏏ]] ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎠᏓᏎᎮᏗ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎴ ᎤᏤᎵ ᎤᏂᏥ ᎨᏒᎩ ᏚᏲᏒᎩ ᎾᎥᎢ ᎤᏤᎵ ᎠᏓᏙᏓ. ᎾᎾᎢ ᎢᎦᏛ ᎪᏍᏓᏱ ᎤᏓᎷᎸ 1809, ᏏᏉᏯ ᎤᏓᏅᏒ ᎯᎠ [[ᏫᎵ ᎦᏚᎲ]] Alabama. ᏀᎾᎢ ᎾᏍᎩ ᎠᏍᎦᏯ ᎪᏢᏅ ᎤᏤᎵ ᏗᏓᏁᏟᏴᎡᏗ ᏥᏄᏍᏗ ᎠᏕᎸ ᎤᏁᎬ ᎠᏥᏅᏏᏓᏍᏗ. ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎾᏍᎬᏘ ᎤᎭ ᏚᎾᎵᎸ ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᏍᏗ ᎤᏪᏴ ᏓᏄᏩ]] ᎠᏰᎵ 1813 ᎠᎴ 1814 ᏗᎦᏘᎴᎩ ᎯᎠ [[ᎩᎦᎨ ᎦᎾᏍᏓ]]. ᎢᏳᏃ ᎾᏍᎩ ᎠᏍᎦᏯ ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ ᏥᏄᏍᏛᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ, ᎾᏍᎩ ᎨᏒᎢ ᎦᎸᎳᏗᎨᏍᏗ ᏄᏓᎷᎸᎾ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᏯᏓᎢᏗᏏ ᎤᎭ ᏚᎾᎵᎸ, ᎠᎴ ᎤᏤᎵ ᏅᏏᎾᏒ ᏰᎵᏇ ᎤᎭ ᎢᏧᎳᎭ ᏭᏪᏙᎢ ᏄᎵᏍᏔᏅ ᎯᎠ ᏓᎾᏟᎲ ᎤᏩᏌᏊ.
 
 == "ᎦᏬᏂᏍᎬ ᏧᎦᎶᎦ" ᎠᎴ ᏣᎳᎩ ᏗᎪᏪᎵ ==
 [[File:CherokeeBeispiel.png|thumb|left|150px|ᏱᏓᏟᎶᏍᏔᏅ ᎠᎦᏓᏅᏖᏗ ᏂᏛᎴᏅᏓ ᏏᏉᏯ ᎤᏤᎵ ᏣᎳᎩ ᏗᎪᏪᎵ. ᎯᎠ ᎢᎬᏱ ᏦᎢ ᎠᎦᏓᏅᏖᏗ ᎢᏧᎳ ᎥᎪᎵᏰᏍᎬ ''ᏣᎳᎩ'' ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ "ᏣᎳᎩ."]]
-ᏥᏄᏍᏗ ᎠᏕᎸ ᎤᏁᎬ ᎠᏥᏅᏏᏓᏍᏗ, ᏏᏉᏯ ᏂᎦᏛ ᎤᏠᏱᎭ ᎬᏙᏗ ᎤᏍᏗ ᎦᎪ ᎠᏰᎲ [[ᏗᏓᏙᎳᏤᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᏍᎦᏂ. ᎢᏳᏓᎵᎭ, ᎯᎠ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎨᏒᎩ ᎠᏓᏕᏲᏅ ᎾᎥᎢ ᎤᎾᏤᎵ [[ᎠᏃᏪᎵᏍᎬ]], ᏩᏎᎯᎲᎢ ᎤᎾᏤᎵ ᏓᎾᏓᏛᎪᏗᏍᎬ ᏥᏄᏍᏗ "ᎦᏬᏂᏍᎬ ᏧᎦᎶᎦ." ᏴᏩᏚᏫᏛ [[1809]], ᏏᏉᏯ ᎤᎴᏅᎲ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎪᏢᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᏃᏪᎵᏍᎬ ᎾᏍᎩᎾᎢ ᎯᎠ ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ. 
+ᏥᏄᏍᏗ ᎠᏕᎸ ᎤᏁᎬ ᎠᏥᏅᏏᏓᏍᏗ, ᏏᏉᏯ ᏂᎦᏛ ᎤᏠᏱᎭ ᎬᏙᏗ ᎤᏍᏗ ᎦᎪ ᎠᏰᎲ [[ᏗᏓᏙᎳᏤᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᏍᎦᏂ. ᎢᏳᏓᎵᎭ, ᎯᎠ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎨᏒᎩ ᎠᏓᏕᏲᏅ ᎾᎥᎢ ᎤᎾᏤᎵ [[ᎠᏃᏪᎵᏍᎬ]], ᏩᏎᎯᎲᎢ ᎤᎾᏤᎵ ᏓᎾᏓᏛᎪᏗᏍᎬ ᏥᏄᏍᏗ "ᎦᏬᏂᏍᎬ ᏧᎦᎶᎦ." ᏴᏩᏚᏫᏛ [[1809]], ᏏᏉᏯ ᎤᎴᏅᎲ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎪᏢᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᏃᏪᎵᏍᎬ ᎾᏍᎩᎾᎢ ᎯᎠ ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ.
 
 ᎤᎶᏐᏅ ᎠᏁᎶᏗᏍᎩ ᎪᏢᏗ [[ᎠᎦᏓᏅᏖᏗ ᎾᏍᎩᎾᎢ ᎠᏂᏏᏴᏫᎭ ᎧᏁᏨ]], ᏏᏉᏯ ᏚᏭᎪᏔᏅ ᎠᏯᏔᏍᏗ ᎠᏂᏏᏴᏫᎭ ᎧᏁᏨ ᎾᏀᎢ [[ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ]] ᎠᎴ ᎪᏢᏗ ᏌᏊ ᎠᎦᏓᏅᏖᏗ ᎾᏍᎩᎾᎢ ᎠᏂᏏᏴᏫᎭ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ. ᎤᎵᏍᎨᏛ ᎢᎬᏁᏗ ᎯᎠ [[ᎶᎻ ᏗᎦᎶᏆᏍᏙ]] ᎠᎴ ᎾᎥᏂᎨᏍᏙᏗ ᏰᎵᏊ ᏱᎩ ᎯᎠ [[Cyrillic ᏗᎦᎶᏆᏍᏙ]], ᎾᏍᎩ ᎠᏍᎦᏯ ᎪᏢᏅᎯ 85 [[ᎠᎦᏓᏅᏖᏗ]] ᎢᏯᏓᏛᏁᏗ ᎯᎠ ᏧᏓᎴᏅᏓ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ. ᎪᎯ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎤᎩᏒᎩ ᏏᏉᏯ 12 ᏧᏕᏘᏴᏓ ᎧᎵᏬᎯ.
 
 ᏀᎾᎢ ᏥᏄᏍᏛᎩ ᎢᎦᏛ ᎤᏝᏏᏛ ᏧᏠᎯᏍᏗ ᎤᏤᎵ ᎾᏍᎩᏴᏫ ᏣᎳᎩ ᏥᏄᏍᏗ ᎯᎠ ᏧᎬᏩᎶᏗᏯ ᎤᏤᎵ ᏣᎳᎩ ᏗᎪᏪᎵ. ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎪᎯᏳᏙᏗ ᎤᏤᎵ ᏗᏁᏝᎾ, ᏏᏉᏯ ᏚᏕᏲᏅᎩ ᎤᏤᎵ ᎤᏪᏥ ᎠᎨᏴ ᎠᏲᎧ ᎯᎳᎪ [[ᎥᎪᎵᏰᏍᎬ]] ᎠᎴ ᎪᏪᎶᏗ ᎭᏫᎾᏗᏢ ᏣᎳᎩ. ᎤᎶᏐᏅ ᎠᏍᏆᏂᎪᎯᏍᏗ ᎾᎥᎢ ᎬᏙᏗ ᎤᏤᎵ ᎢᏤ ᎠᏃᏪᎵᏍᎬ, ᏏᏉᏯ ᎠᏁᎳᏛᏅ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎤᏤᎵ ᎠᏓᎪᎾᏛᏙᏗ ᎠᏂᎳᏍᏓᎸ [[ᏅᏬᏘ ᎠᎾᏏᎦᏯ]] ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᏋ ᎠᎵᏖᎸᏗ ᎾᎥᎢ ᎠᏂ ᎾᏍᎩᎾᎢ ᎠᎴᏂᏙᎲ [[ᏄᏩᎾᏅ]] ᎾᎥᎢ ᎤᏐᏅᎢ [[ᎠᏓᏅᏙ]]. ᏏᏉᏯ ᏭᎵᏍᏆᏛ ᎪᎯᏳᏔᏅ ᎤᏤᎵ ᎠᏓᎪᎾᏛᏙᏗ ᎠᏂᏟᏏᏍᎬ [[Chickamaugan]] [[ᏓᏄᏩ ᎠᎾᎵᎯ]]. ᏄᎵᏍᏛ ᏗᏤᎢ ᎯᎠ ᏣᎳᎩ ᏗᎪᏪᎵ ᎠᏰᏍᏛᏗ ᎠᎴ ᎯᎠ ᏣᎳᎩ ᎨᏒᎩ ᎠᎧᎵᎢᎲ [[ᏗᏕᎶᏆᏍᏗ]]ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎠᏕᎶᏆᏍᏗ ᎯᎠ ᎢᏤ ᎪᏪᎳᏅᎯ ᎦᏬᏂᎯᏍᏗ. ᎾᎥᎢ 1823 ᎯᎠ ᏣᎳᎩ ᏗᎪᏪᎵ ᏥᏄᏍᏛᎩ ᎭᏫᎾᏗᏢ ᎧᎵ ᎬᏙᏗ ᎾᎥᎢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ. ᎯᎠ ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ ᏥᏄᏍᏛᎩ ᎪᏢᏅᎯ ᎠᏰᎵ ᎤᏒᎧᎵ ᎾᎥᎢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎭᏫᎾᏗᏢ 1825.
 
 == ᎥᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᏲᏩᏁᎬ ᎠᎴ ᎤᏗᏗᏢ ᏭᏕᎵᎬ ==
-ᎤᎶᏐᏅ ᎯᎠ ᎪᎯᏳᏙᏗ ᎤᏤᎵ ᏣᎳᎩ ᏗᎪᏪᎵ ᎾᎥᎢ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎭᏫᎾᏗᏢ 1825, ᏏᏉᏯ ᎠᎢᏒᎩ ᎯᎠ ᎢᏤ ᏣᎳᎩ ᏀᎾ ᎨᏒ ᎭᏫᎾᏗᏢ [[ᏲᏩᏁᎬ]]. ᏀᎾᎢ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᏫᏒᏗ ᎦᎸᎳᏗᏢ [[ᎪᏢᏅᎥᏍᎩ]] ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᎠᎹ ᏧᏂᎸᏫᏍᏓᏁᏗ. ᎾᏍᎩ ᎠᏍᎦᏯ ᎤᎵᏱᎸᏛ ᏕᏕᏲᏗ ᎯᎠ ᏣᎳᎩ ᏗᎪᏪᎵ ᎾᏂᎥᏇ ᎦᎪ ᎤᎷᏨᎩ ᎾᏍᎩ ᎠᏍᎦᏯ. ᎭᏫᎾᏗᏢ 1828, ᏏᏉᏯ ᎥᎢᏒᎢ [[ᏬᏏᏓᏂ, D.C.]] ᏥᏄᏍᏗ ᎢᎦᏛ [[ᎦᏅᏍᎨᏂ]] ᏗᏓᏁᏤᏗ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ ᎾᏍᎩᎾᎢ ᎦᏙᎯ ᎭᏫᎾᏗᏢ [[ᎣᎦᎳᎰᎻ]]. 
+ᎤᎶᏐᏅ ᎯᎠ ᎪᎯᏳᏙᏗ ᎤᏤᎵ ᏣᎳᎩ ᏗᎪᏪᎵ ᎾᎥᎢ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎭᏫᎾᏗᏢ 1825, ᏏᏉᏯ ᎠᎢᏒᎩ ᎯᎠ ᎢᏤ ᏣᎳᎩ ᏀᎾ ᎨᏒ ᎭᏫᎾᏗᏢ [[ᏲᏩᏁᎬ]]. ᏀᎾᎢ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᏫᏒᏗ ᎦᎸᎳᏗᏢ [[ᎪᏢᏅᎥᏍᎩ]] ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᎠᎹ ᏧᏂᎸᏫᏍᏓᏁᏗ. ᎾᏍᎩ ᎠᏍᎦᏯ ᎤᎵᏱᎸᏛ ᏕᏕᏲᏗ ᎯᎠ ᏣᎳᎩ ᏗᎪᏪᎵ ᎾᏂᎥᏇ ᎦᎪ ᎤᎷᏨᎩ ᎾᏍᎩ ᎠᏍᎦᏯ. ᎭᏫᎾᏗᏢ 1828, ᏏᏉᏯ ᎥᎢᏒᎢ [[ᏬᏏᏓᏂ, D.C.]] ᏥᏄᏍᏗ ᎢᎦᏛ [[ᎦᏅᏍᎨᏂ]] ᏗᏓᏁᏤᏗ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ ᎾᏍᎩᎾᎢ ᎦᏙᎯ ᎭᏫᎾᏗᏢ [[ᎣᎦᎳᎰᎻ]].
 
-ᎤᏤᎵ ᎠᏁᎳᏗᏍᏗ ᎠᏲᎸᎯ ᎾᏍᎩ ᎠᏍᎦᏯ ᎾᏀᎢ ᏚᏓᏂᏴᏒ ᎬᏙᏗ ᏗᏂᎳᏫᎩ ᏐᎢ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏂᎳᏍᏓᎸ ᏂᏛᎴᏅᏓ ᏴᏩᏚᏫᏛ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ. ᎬᏙᏗ ᎾᏍᎩ ᎯᎠ ᏓᎾᏠᏍᎦ ᎾᏍᎩ ᎠᏍᎦᏯ ᏚᏭᎪᏔᏅ ᎪᏢᏗ ᏣᎳᎩ ᏗᎪᏪᎵ ᎾᏍᎩᎾᎢ ᎢᎬᏩᎾᏓᎴᎩ ᎬᏙᏗ ᏄᎾᏛᏅ ᏂᎦᏛ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏂᎳᏍᏓᎸ. ᎬᏙᏗ ᎪᎯ ᎭᏫᎾᏗᏢ ᎣᏓᏅᏛ, ᏏᏉᏯ ᎤᎴᏅᎲ ᎥᎢᏒᎢ ᎡᏍᎦᏂ ᎡᏙᎠ ᎢᎦ [[ᎡᏩᏐᎾ]] ᎠᎴ [[ᏍᏆᏂᏤᏍᏛᎢ]] ᎤᎪᎲᎢ ᎠᏂᎳᏍᏓᎸ ᏀᎾᎢ. 
+ᎤᏤᎵ ᎠᏁᎳᏗᏍᏗ ᎠᏲᎸᎯ ᎾᏍᎩ ᎠᏍᎦᏯ ᎾᏀᎢ ᏚᏓᏂᏴᏒ ᎬᏙᏗ ᏗᏂᎳᏫᎩ ᏐᎢ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏂᎳᏍᏓᎸ ᏂᏛᎴᏅᏓ ᏴᏩᏚᏫᏛ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ. ᎬᏙᏗ ᎾᏍᎩ ᎯᎠ ᏓᎾᏠᏍᎦ ᎾᏍᎩ ᎠᏍᎦᏯ ᏚᏭᎪᏔᏅ ᎪᏢᏗ ᏣᎳᎩ ᏗᎪᏪᎵ ᎾᏍᎩᎾᎢ ᎢᎬᏩᎾᏓᎴᎩ ᎬᏙᏗ ᏄᎾᏛᏅ ᏂᎦᏛ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏂᎳᏍᏓᎸ. ᎬᏙᏗ ᎪᎯ ᎭᏫᎾᏗᏢ ᎣᏓᏅᏛ, ᏏᏉᏯ ᎤᎴᏅᎲ ᎥᎢᏒᎢ ᎡᏍᎦᏂ ᎡᏙᎠ ᎢᎦ [[ᎡᏩᏐᎾ]] ᎠᎴ [[ᏍᏆᏂᏤᏍᏛᎢ]] ᎤᎪᎲᎢ ᎠᏂᎳᏍᏓᎸ ᏀᎾᎢ.
 
 ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ, ᏏᏉᏯ ᎠᏍᎩᏓᏒᎯ ᎥᎪᏩᏘᏍᎬ ᎯᎠ ᎡᏆ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎵᎪᏗ. ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏀᎾ ᎠᏁᎳᏗᏍᏗ ᎤᎪᎲᎢ ᏣᎳᎩ ᎦᎪ ᎠᏰᎲ ᎤᏓᏅᏒ [[ᎠᏂᏍᏆᏂᎢ]] Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᎤᏲᎱᏒ ᎠᏰᎵ 1843 ᎠᎴ 1845.
 
@@ -58,7 +58,7 @@ Lowery, ᏙᏱᏗᏝ ᏭᏎᎮᎴ ᎤᏪᏅᏍᏗ ᎠᏲᎦ, ᏅᏊ ᏅᏛᏛᏁ
 * ᎯᎠ ᏚᏙᎥ ᎯᎠ ᏍᎦᏚᎩ ᎭᏢᏃ ᏏᏉᏯ ᎠᏰᎲ ᎠᎴᏂᏙᎸ ᎭᏫᎾᏗᏢ ᎣᎦᎳᎰᎻ ᏥᏄᏍᏛᎩ ᎦᏁᏟᏴᏓ ᏏᏉᏯ ᏍᎦᏚᎩ ᎭᏫᎾᏗᏢ 1851. ᎯᎳᎪ ᎢᏳ ᎣᎦᎳᎰᎻ ᏥᏄᏍᏛᎩ ᎤᏬᎯᏳᏔᏅ ᎯᎠ ᏗᏌᏊ ᎤᎾᎵᎪᎯ, Ꮎ ᎡᏍᎦᏂ ᎠᏓᏁᏟᏴᏍᏗ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[Sequoyah County|ᏏᏉᏯ ᏍᎦᏚᎩ]].
 * ᎯᎠ [[Sequoia]] ᏡᎬ ᎨᏒᎢ ᏂᎦᎥᏊ ᏁᎵᏒ ᎾᏍᏋ ᏓᎪᎥᎩ ᎤᎶᏐᏅ ᎾᏍᎩ ᎠᏍᎦᏯ (ᎠᎪᏩᏛᏗ, ᎾᏍᎩᎾᎢ ᏄᎵᏍᏛ, ᎯᎠ [[OED]]). ᎢᎦᏛ ᏩᎶᎠ ᎤᎭ ᎤᏂᎦᏛᎲᏍᎩ ᎪᎯ ᎠᏆᏤᎵ ᎠᏛᏗ {{verify source}}.
 * ᎯᎠ ᎧᏁᎢᏍᏔᏅ [[State of Sequoyah|ᎤᏔᏂᏗ ᎦᏙᎯ ᏏᏉᏯ]] ᏥᏄᏍᏛᎩ ᏓᎪᎥᎩ ᎭᏫᎾᏗᏢ ᎤᏤᎵ ᎠᏥᎸᏉᏗ.
-* [[Sequoyah High School (Oklahoma)|ᏏᏉᏯ ᎦᎸᎳᏗ ᏗᏕᎶᏆᏍᏗ (ᎣᎦᎳᎰᎻ)]] ᎨᏒᎢ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏥᏍᏆᏂᎪᏛ ᏗᏕᎶᏆᏍᏗ ᏓᎪᎥᎩ ᎤᎶᏐᏅ ᎯᎠ ᎪᎷᏩᏛᏗ ᎯᎠ ᏣᎳᎩ ᏣᎳᎩ ᏗᎪᏪᎵ. hii
+* [[Sequoyah High School (Oklahoma)|ᏏᏉᏯ ᎦᎸᎳᏗ ᏗᏕᎶᏆᏍᏗ (ᎣᎦᎳᎰᎻ)]] ᎨᏒᎢ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏥᏍᏆᏂᎪᏛ ᏗᏕᎶᏆᏍᏗ ᏓᎪᎥᎩ ᎤᎶᏐᏅ ᎯᎠ ᎪᎷᏩᏛᏗ ᎯᎠ ᏣᎳᎩ ᏣᎳᎩ ᏗᎪᏪᎵ.
 * [[Sequoyah Research Center|ᏏᏉᏯ ᏅᎠᏯᏍᏗ ᎠᏰᎵ]] ᎨᏒᎢ ᏅᎠᏯᏍᏗ ᎠᏰᎵ ᎬᏙᏗ ᏓᏓᏂᏟᏍᎬ ᎠᎴ ᎪᏪᎸ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᏁᎵᏒ ᎠᎴ ᎪᏪᎸ ᏄᏍᏗᏓᏅ.
 
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
