*Empty MediaWiki Message*

--- a/ᏢᏓᏥ_ᎤᏅᏣᏗ.mw
+++ b/ᏢᏓᏥ_ᎤᏅᏣᏗ.mw
@@ -1,6 +1,29 @@
-[[File:Leopard africa.jpg|thumb|ᏢᏓᏥ ᎤᏅᏣᏗ.]]
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|-
+| style="background:#D3D3A4;" align="center" colspan=2 |
+{| border="0" cellpadding="1" cellspacing="0"
+|-
+| align="center" width="140px" | <big><big>'''ᏢᏓᏥ ᎤᏅᏣᏗ'''</big></big>
+|}
+|-
+| align=center colspan=2 | [[File:Leopard africa.jpg|250px]]
+|-
+| '''Regnum''' || [[Animalia]] (ᏅᎩᏗᎦᏅᏌᏗ)
+|-
+| '''Phylum''' || [[Chordata]]
+|-
+| '''Classis''' || [[Mammalia]]
+|-
+| '''Ordo''' || [[Carnivora]]
+|-
+| '''Familia''' || [[Felidae]] (ᏪᏌ ᏏᏓᏁᎸᎯ)
+|-
+| '''Genus''' || ''[[Panthera]]'' (ᏢᏓᏥ)
+|-
+| '''Species''' || ''[[ᏢᏓᏥ ᎤᏅᏣᏗ|P. pardus]]'' (ᏢᏓᏥ ᎤᏅᏣᏗ)
+|}
 
-'''ᏢᏓᏥ ᎤᏅᏣᏗ''' (tlv-da-tsi u-nv-tsa-di)
+<big>'''ᏢᏓᏥ ᎤᏅᏣᏗ'''</big> (''Tlvdatsi unvtsadi''; '''''Panthera pardus'''''). ᎡᏆ ᏅᎩᏗᎦᏅᏌᏗ ᏪᏌ ᏏᏓᏁᎸᎯ ᎡᎯ ᎠᎴ ᏓᎶᏂᎨ ᎠᎴ ᎬᏂᎨ ᎠᏑᏫᏓ <u>ᏢᏓᏥ ᎤᏅᏓᏥ</u>.
 
 {{stub}}
 
