*Empty MediaWiki Message*

--- a/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
+++ b/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
@@ -430,3 +430,10 @@ Hello,
  
 The Wikimedia Foundation is discussing changes to its Terms of Use.  The discussion can be found at [[m:Talk:Terms of use|Talk:Terms of use]]. Everyone is invited to join in. Because the new version of [[m:Terms of use|Terms of use]] is not in final form, we are not able to present official translations of it. Volunteers are welcome to translate it, as German volunteers have done at [[:m:Terms of use/de]], but we ask that you note at the top that the translation is unofficial and may become outdated as the English version is changed. The translation request can be found at [[m:Translation requests/WMF/Terms of Use 2]] -- [[m:User:Mdennis (WMF)|Maggie Dennis, Community Liaison]] 00:34, 27 October 2011 (UTC)
 <!-- EdwardsBot 0119 -->
+
+==2011 Fundraising Is Almost Here==
+[[File:Wikimedia_Foundation_RGB_logo_with_text.svg|80px|left]] Hello Wikipedians, my name is Alex and I am working for the Wikimedia Foundation during the 2011 Fundraiser. This year's fundraiser is intended to be a collaborative and global effort; we recognize that messages which may  perform well in the United States don't necessarily translate well, or appeal to international audiences. <br>
+
+I'm contacting you as I am currently looking for volunteers who are willing to contribute to this project by helping [[m:Fundraising_2011/Translation|translate]] and [[m:Fundraising_2011/Local_testing|localize messages]] into your local language, suggesting [[m:Fundraising_2011/communityappeal|community appeals]] for us to use,  and to provide us with feedback on the [[m:Fundraising_2011|Fundraising Meta Page]]. We've started the setup on [[m:Fundraising_2011|meta]] for both [[m:Fundraising_2011/Translation|translation]], [[m:Fundraising_2011/Tech_stats_and_resources|statistical analysis]], and [[m:Fundraising_2011/Local_testing|local discussion and testing]]. We actively encourage focusing discussion on meta so we can all work together. <br>Use the talk pages on meta, talk to your local communities, talk to others, talk to us.  Engagement is what we strive for, without each other we would never had made Wikimedia succeed. The staff working on this fundraiser is comprised of long-time Wikimedians with as much care and concern for the success of this drive as the volunteers, and we want you to actively participate and have a voice. Everyone is welcome to contact any of us on staff at any time with a timely response to follow.  I look forward to working with you during this year's fundraiser.
+
+If someone could translate this message I would really appreciate it so that everyone is able to understand our goals and contribute to this year's campaign.<br>[[User:Azariv|Azariv]] 23:19, 31 October 2011 (UTC)
