*Empty MediaWiki Message*

--- a/ᎠᎳ_ᏊᎦᏦᏩ.mw
+++ b/ᎠᎳ_ᏊᎦᏦᏩ.mw
@@ -1,4 +1,4 @@
-[[File:Dmitriy_Medvedev_with_Alla_Pugacheva.jpg|thumb|right|250px|ᎠᎳ ᏊᎦᏦᏩ]]
+[[File:Dmitriy_Medvedev_with_Alla_Pugacheva.jpg|thumb|right|250px|ᏗᎻᏟ ᎺᏗᏪᏕᏫ ᎠᎴ ᎠᎳ ᏊᎦᏦᏩ]]
 
 <big>ᎠᎳ ᏉᎵᏐᏩᎾ ᏊᎦᏦᏩ</big> ([[ᏲᏂᎢ]]: '''Алла Борисовна Пугачёва''' ''Alla Borisovna Pugachyova'') ᎠᏲᏂᎢ [[ᏗᎧᏃᎩᏍᎩ]].
 
