*Empty MediaWiki Message*

--- a/ᎠᎳ_ᏊᎦᏦᏩ.mw
+++ b/ᎠᎳ_ᏊᎦᏦᏩ.mw
@@ -1,6 +1,24 @@
-[[File:Dmitriy_Medvedev_with_Alla_Pugacheva.jpg|thumb|right|250px|ᏗᎻᏟ ᎺᏗᏪᏕᏫ ᎠᎴ ᎠᎳ ᏊᎦᏦᏩ]]
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|-
+| style="background:#D3D3A4;" align="center" colspan=2 |
+{| border="0" cellpadding="1" cellspacing="0"
+|-
+| align="center" width="140px" | <big><big>'''ᎠᎳ ᏊᎦᏦᏩ'''</big></big>
+|}
+|-
+| align=center colspan=2 | [[File:Dmitriy_Medvedev_with_Alla_Pugacheva.jpg|300px]] <br> ᏗᎻᏟ ᎺᏗᏪᏕᏫ ᎠᎴ ᎠᎳ ᏊᎦᏦᏩ
+|-
+| '''ᏚᏙᎥ''' || ᎠᎳ ᏉᎵᏐᏩᎾ ᏊᎦᏦᏩ <br> ''Alla Borisovna Pugachëva''
+|-
+| '''ᎤᏕᏘᏱᏍᎬ''' || ᎧᏬᏂ 15, 1949 
+|-
+| '''ᎾᎿᎤᏕᏅ''' || [[ᎹᏍᎪ]], [[ᏲᏂᎢ]]
+|-
+| '''ᎠᏂᏁᎵ''' || [[ᎻᎪᎳᏏ ᎣᏆᎧᏏ]] <small>''(Mykolas Orbakas)''</small> <br> (1969-1973) <br> [[ᎡᎵᎩ ᏍᏕᏩᏃᏫᏥ]] <small>''(Alexander Stefanovich)''</small> <br> (1976-1980) <br> [[ᏰᏩᎨᏂ ᏉᎵᏗᏂ]] <small>''(Yevgeniy Boldin)''</small> <br> (1985-1993) <br> [[ᏈᎵᎩ ᎩᎵᎪᎶᏫ]] <small>''(Philipp Kirkorov)''</small> <br> (1994-2005)
+|-
+|}
 
-<big>ᎠᎳ ᏉᎵᏐᏩᎾ ᏊᎦᏦᏩ</big> ([[ᏲᏂᎢ]]: '''Алла Борисовна Пугачёва''' ''Alla Borisovna Pugachyova'') ᎠᏲᏂᎢ [[ᏗᎧᏃᎩᏍᎩ]].
+<big>ᎠᎳ ᏊᎦᏦᏩ</big> ([[ᏲᏂᎢ]]: '''Алла Борисовна Пугачёва''' ''Alla Borisovna Pugachyova'') ᎠᏲᏂᎢ [[ᏗᎧᏃᎩᏍᎩ]].
 
 [[az:Alla Puqaçova]]
 [[be:Ала Барысаўна Пугачова]]
