--- a/ᏔᏘᏯᎾ_ᏊᎳᏃᏩ.mw
+++ b/ᏔᏘᏯᎾ_ᏊᎳᏃᏩ.mw
@@ -1,6 +1,29 @@
-[[File:Tatjana_Bulanowa.jpg|thumb|right|250px|ᏔᏘᏯᎾ ᏊᎳᏃᏩ]]
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|-
+| style="background:#D3D3A4;" align="center" colspan=2 |
+{| border="0" cellpadding="1" cellspacing="0"
+|-
+| align="center" width="140px" | <big><big>'''ᏔᏘᏯᎾ ᏊᎳᏃᏩ'''</big></big>
+|}
+|-
+| align=center colspan=2 | [[File:Tatjana_Bulanowa.jpg|200px]] <br> ᏔᏘᏯᎾ ᏊᎳᏃᏩ
+|-
+| '''ᏚᏙᎥ''' || ᏔᏘᏯᎾ ᎢᏩᏃᏩᎾ ᏊᎳᏃᏩ <br> ''Tatyana Ivanovna Bulanova''
+|-
+| '''ᎤᏕᏘᏱᏍᎬ''' || ᎠᏅᏱ 6, 1969 
+|-
+| '''ᎾᎿᎤᏕᏅ''' || [[ᎴᏂᏂᎩᎳᏗ]], [[ᏲᏂᎢ]]
+|-
+| '''ᎠᏂᏁᎵ''' || [[ᏂᎪᎳᎢ ᏔᎩᎵᏂ]] <small>''(Nikolai Tagrin)''</small> <br> [[ᏩᎳᏗᏍᎳᏫ ᎳᏗᎼᏫ]] <small>''(Vladislav Radimov)''</small> <br> (2007—)
+|-
+|}
 
 <big>ᏔᏘᏯᎾ ᏊᎳᏃᏩ</big> ([[ᏲᏂᎢ]]: '''Татьяна Ивановна Буланова''' ''Tat'yana Ivanovna Bulanova'') ᎠᏲᏂᎢ [[ᏗᎧᏃᎩᏍᎩ]].
+
+== ᏗᏂᏲᏟ ==
+
+* [[ᎡᎵᎩ ᏔᎩᎵᏂ]] ''(Alexander Tagrin)'' (ᎠᏅᏱ 19, 1993)
+* [[ᏂᎩᏔ ᎳᏗᎼᏫ]] ''(Nikita Radimov)'' (ᎠᏅᏱ 8, 2007)
 
 [[de:Tatjana Iwanowna Bulanowa]]
 [[en:Tatyana Bulanova]]
