--- a/ᏔᏘᏯᎾ_ᏊᎳᏃᏩ.mw
+++ b/ᏔᏘᏯᎾ_ᏊᎳᏃᏩ.mw
@@ -1,6 +1,6 @@
 {| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
 |-
-| style="background:#D3D3A4;" align="center" colspan=2 |
+| style="background:#f0e68c;" align="center" colspan=2 |
 {| border="0" cellpadding="1" cellspacing="0"
 |-
 | align="center" width="140px" | <big><big>'''ᏔᏘᏯᎾ ᏊᎳᏃᏩ'''</big></big>
