*Empty MediaWiki Message*

--- a/ᏈᎵᎩ_ᎩᎵᎪᎶᏫ.mw
+++ b/ᏈᎵᎩ_ᎩᎵᎪᎶᏫ.mw
@@ -12,13 +12,13 @@
 |-
 | '''ᎤᏕᏘᏱᏍᎬ''' || ᎧᏬᏂ 30, 1967 
 |-
-| '''ᎾᎿᎤᏕᏅ''' || [[ᏩᎵᎾ]], [[ᏊᎵᎦᎵᏱ]]
+| '''ᎾᎿᎤᏕᏅ''' || [[ᏩᎵᎾ]], [[ᏊᎵᎨᎵᏱ]]
 |-
-| '''ᎠᏂᏁᎵ''' || [[ᎠᎳ ᏊᎦᏦᏩ]] <small>''(alla pugacheva)''</small> (1994-2005)
+| '''ᎠᏂᏁᎵ''' || [[ᎠᎳ ᏊᎦᏦᏩ]] <small>''(Alla Pugacheva)''</small> (1994-2005)
 |-
 |}
 
-<big>ᏈᎵᎩ ᎩᎵᎪᎶᏫ </big> ([[ᏲᏂᎢ]]: '''Филипп Бедросович Киркоров''' ''Philipp Bedrosovich Kirkorov'') ᎠᏲᏂᎢ [[ᏗᎧᏃᎩᏍᎩ]].
+<big>ᏈᎵᎩ ᎩᎵᎪᎶᏫ </big> ([[ᏊᎵᎨᎵᏱ]]: '''Фи́лип Бедро́сов Кирко́ров''' ''Philipp Bedrosov Kirkorov''; [[ᏲᏂᎢ]]: '''Филипп Бедросович Киркоров''' ''Philipp Bedrosovich Kirkorov'') ᎠᏲᏂᎢ ᎠᎴ ᎠᏊᎵᎨᎵᏱ [[ᏗᎧᏃᎩᏍᎩ]].
 
 [[az:Filip Kirkorov]]
 [[bg:Филип Киркоров]]
