*Empty MediaWiki Message*

--- a/ᎠᎳ_ᏊᎦᏦᏩ.mw
+++ b/ᎠᎳ_ᏊᎦᏦᏩ.mw
@@ -6,7 +6,7 @@
 | align="center" width="140px" | <big><big>'''ᎠᎳ ᏊᎦᏦᏩ'''</big></big>
 |}
 |-
-| align=center colspan=2 | [[File:Dmitriy_Medvedev_with_Alla_Pugacheva.jpg|300px]] <br> ᏗᎻᏟ ᎺᏗᏪᏕᏫ ᎠᎴ ᎠᎳ ᏊᎦᏦᏩ
+| align=center colspan=2 | [[File:Dmitriy_Medvedev_with_Alla_Pugacheva.jpg|300px]] <br> [[ᏗᎻᏟ ᎺᏗᏪᏕᏫ]] ᎠᎴ ᎠᎳ ᏊᎦᏦᏩ
 |-
 | '''ᏚᏙᎥ''' || ᎠᎳ ᏉᎵᏐᏩᎾ ᏊᎦᏦᏩ <br> ''Alla Borisovna Pugachëva''
 |-
