*Empty MediaWiki Message*

--- a/ᏓᏫᏍᎦᎳ.mw
+++ b/ᏓᏫᏍᎦᎳ.mw
@@ -1,3 +1,4 @@
+[[Image:Miorcani flint.jpg|thumb|180px|ᏓᏫᏍᎦᎳ.]]
 [[image:flint.jpg|thumb|180px| ᏓᏫᏍᎦᎳ ᏂᎯ ᏂᏛᎴᏅᏓ ᎯᎠ [[Onondaga (geological formation)|Onondaga]] limestone ᏫᏚᏳᎪᏛ, [[Buffalo, New York|ᏯᎾᏌ, ᎢᏤ York]]. (3.8 cm ᎠᏯᏖᎾ)]]
 '''ᏓᏫᏍᎦᎳ''' (ᎠᎴ '''flintstone''') ᎨᏒᎢ ᎠᏍᏓᏯ, [[ᏩᎵᏃᎯᏯᏍᎬ]] [[cryptocrystalline]] [[silicate]] ᎤᏙᏢᏒ ᎯᎠ [[mineral|ᎪᎢ]] [[quartz|ᎤᏓᏅᏖᏗ]], categorized ᏥᏄᏍᏗ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ [[ᎠᏣᏅᏙ]]. ᏓᏫᏍᎦᎳ ᎨᏒᎢ ᎤᏠᏱᎭ ᎤᎳᏏᎩ-ᎤᏍᎪᎸ ᏌᎪᏂᎨ, ᏌᎪᏂᎨ, ᎬᎿᎨ, ᎠᎴ ᎠᏍᏛᎩ ᏬᏗᎨ ᎭᏫᎾᏗᏢ ᏗᎧᏃᏗ, ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᎭ ᎦᎶᏂᏗ ᎦᎾᏄᎪᏨᎢ. ᎾᏍᎩ ᏄᎵᏍᏔᏅ ᏭᏂᎬᏫᏳᏒ ᏥᏄᏍᏗ [[ᏂᎯ]]ᎠᎴ masses ᎭᏫᎾᏗᏢ ᏩᎵᏃᎯᏯᏍᎬ ᎯᎸᏍᎩ ᏅᏯ, ᏯᏛᎿ ᏥᏄᏍᏗ [[ᎦᏙᎯ]]ᎠᎴ [[limestone]].
 
