The file [[:Image:Friesian-Holstein.jpg]] has been replaced by [[:Image:Cow_female_black_white.jpg]] by administrator [[:commons:User:Bdk]]: ''duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/ᏩᎧ.mw
+++ b/ᏩᎧ.mw
@@ -2,7 +2,7 @@
 | color = pink
 | name = ᏩᎧ
 | fossil_range = 
-| image = Friesian-Holstein.jpg
+| image =Cow_female_black_white.jpg
 | image_width = 200px
 | image_caption = ᏩᎧ
 | regnum = [[Animalia]]
