--- a/Indo-European_languages.mw
+++ b/Indo-European_languages.mw
@@ -53,7 +53,7 @@
 [[gv:Çhengaghyn Ind-Oarpagh]]
 [[he:שפות הודו-אירופיות]]
 [[hi:हिन्द-यूरोपीय भाषा-परिवार]]
-[[hr:Indoeuropski jeziici]]
+[[hr:Indoeuropski jezici]]
 [[hsb:Indoeuropske rěče]]
 [[hu:Indoeurópai nyelvcsalád]]
 [[hy:Հնդեվրոպական լեզուներ]]
