*Empty MediaWiki Message*

--- a/ᏫᎾᏏ.mw
+++ b/ᏫᎾᏏ.mw
@@ -1,6 +1,6 @@
 [[File:Venus_de_Milo_Louvre_Ma399.jpg|thumb|200px|ᏫᎾᏏ]]
 
-'''ᏫᎾᏏ''' ᎦᎸᎳᏗ ᎡᎯ ᎬᎨᏳᎢ ᎤᏤᎵ ᎨᏒᎢ.
+'''ᏫᎾᏏ''' ᎶᎻ ᎦᎸᎳᏗ ᎡᎯ ᎠᏓᎨᏳᏗ ᎤᏤᎵᎦ.
 
 [[ab:Венера]]
 [[ar:فينوس (ميثولوجيا)]]
