*Empty MediaWiki Message*

--- a/ᏫᎾᏏ.mw
+++ b/ᏫᎾᏏ.mw
@@ -1,6 +1,6 @@
 [[File:Venus_de_Milo_Louvre_Ma399.jpg|thumb|200px|ᏫᎾᏏ]]
 
-'''ᏫᎾᏏ''' ᎠᎶᎻ ᎤᏁᎳᏅᎯ ᎠᎨᏴ ᎠᏓᎨᏳᏗ ᎨᏒᎢ.
+<big>'''ᏫᎾᏏ'''</big> ᎠᎶᎻ ᎤᏁᎳᏅᎯ ᎠᎨᏴ ᎠᏓᎨᏳᏗ ᎨᏒᎢ.
 
 [[ab:Венера]]
 [[ar:فينوس (ميثولوجيا)]]
