*Empty MediaWiki Message*

--- a/ᎠᏂᎪᎢ_ᎤᏂᏃᎮᎸᎯ.mw
+++ b/ᎠᏂᎪᎢ_ᎤᏂᏃᎮᎸᎯ.mw
@@ -1,5 +1,5 @@
 [[File:Dionysos satyrs Cdm Paris 575.jpg|thumb|right|[[ᏓᏲᏂᏌ]] ᎠᎴ ᎤᎦᏐᏣᏁᏛ ᎠᏂᏍᎦᏯ]]
-=== ᎠᏂᎣᎵᎻᏆ ===
+== ᎠᏂᎣᎵᎻᏆ ==
 
 {| class="wikitable" style="border:1px; background-color:#f7f8ff" align=center cellpadding="6"
 |-align="center" bgcolor="#e6e9ff"
