*Empty MediaWiki Message*

--- a/ᎠᏂᎪᎢ_ᎤᏂᏃᎮᎸᎯ.mw
+++ b/ᎠᏂᎪᎢ_ᎤᏂᏃᎮᎸᎯ.mw
@@ -26,7 +26,7 @@
 |-
 | ᾍδης (''Ádēs'') || [[ᎮᏗᏏ]] || ᎤᏁᎳᏅᎯ [[ᏨᏍᎩᏃ]].
 |-
-| Ήφαιστος (''Ḗfaistos'') || [[ᎮᏇᏍᏔ]] || ᎪᏢᏅᎥᏍᎩ ᎠᎴ ᎤᏁᎳᏅᎯ [[volcanoes]].
+| Ήφαιστος (''Ḗfaistos'') || [[ᎮᏇᏍᏔ]] || ᎪᏢᏅᎥᏍᎩ ᎠᎴ ᎤᏁᎳᏅᎯ [[ᎠᏥᎳ ᏙᏓᎸᎢ]].
 |-
 | Ήρα (''Ḗra'') || [[ᎮᎳ]] || ᎤᏁᎳᏅᎯ ᎠᎨᏴ [[ᏨᏓᏓᏨᏍᏙᏗ]] ᎠᎴ [[ᎤᎬᏫᏳᎯ ᎠᎨᏴ]] ᎤᎾᏁᎳᏅᎯ ᎤᎾᏤᎵᎦ.
 |-
