*Empty MediaWiki Message*

--- a/ᎠᏂᎪᎢ_ᎤᏂᏃᎮᎸᎯ.mw
+++ b/ᎠᏂᎪᎢ_ᎤᏂᏃᎮᎸᎯ.mw
@@ -45,6 +45,109 @@
 || [[ᏗᎠᏏ]] / [[ᏑᏍ]] || ᎤᏁᎳᏅᎯ [[ᎠᏴᏓᏆᎶᏍᎬ]] ᎠᎴ [[ᎤᎬᏫᏳᎯ]] ᎤᎾᏁᎳᏅᎯ ᎤᎾᏤᎵᎦ.
 |}
 
+=== [[Protogenoi]] ===
+
+{| class="wikitable" style="border:1px; background-color:#f7f8ff" align=center cellpadding="6"
+|-align="center" bgcolor="#e6e9ff"
+!!width="170"|ᎪᎢ ᏚᏙᎥ!!width="140"|ᏣᎳᎩ ᏚᏙᎥ!!width="400"|Dominion
+|-
+| Αιθήρ (''Aithḗr'') || [[ᎡᏔ]] || ᎤᏁᎳᏅᎯ [[ᎦᏃᎴᏍᎬ]].
+|-
+| Ἀνάγκη (''Anágkē'') || [[ᎠᎾᏂᎨ]] || ᎤᏁᎳᏅᎯ ᎠᎨᏴ [[ᎤᏚᎳᏗ]].
+|-
+| Έρεβος (''Érevos'') || [[ᎡᎴᏉ]] || ᎤᏁᎳᏅᎯ [[ᎤᎳᏏᎬᎢ]].
+|-
+| Γαία (''Gaía'') || [[ᎦᏯ]] || ᎤᏁᎳᏅᎯ ᎠᎨᏴ [[ᎡᎶᎯ]].
+|-
+| Ημέρα (''Ēméra'') || [[ᎮᎺᎳ]] || ᎤᏁᎳᏅᎯ ᎠᎨᏴ [[ᎢᎦ]].
+|-
+| Χάος (''Kháos'') || [[ᎧᎣᏏ]] || ᎤᏁᎳᏅᎯ [[chaos]]
+|-
+| Χρόνος (''Khrónos'') || [[ᏉᏃᏏ]] || ᎤᎡᎳᏅᎯ [[ᎢᏳᏩᎪᏗ]].
+|-
+| αἱ Nῆσοι (''ai Nḗsoi'') || [[ᎠᎹᏰᏟ|ᎯᎸᏍᎩ ᎠᎹᏰᏟ]] || ᎤᏁᎳᏅᎯ ᎠᏂᎨᏴ [[ᎠᎹᏰᏟ]].
+|-
+| Νύξ (''Nýx'') || [[ᏂᎩᏏ]] || ᎤᏁᎳᏅᎯ ᎠᎨᏴ [[ᏒᏃᏱ]].
+|-
+| Ουρανός (''Ouranós'') || [[ᏳᏪᏄ]] || ᎤᏁᎳᏅᎯ [[ᎦᎸᎶᎢ]].
+|-
+| Ούρος (''Oúros'') || [[ᎣᏓᎸᎢ|ᏙᏓᎸᎢ]] || ᎤᎾᏁᎳᏅᎯ [[ᏙᏓᎸᎢ]].
+|-
+| Πόντος (''Póntos'') || [[ᏋᏗ]] || ᎤᏁᎳᏅᎯ [[ᎠᎺᏉᎯ]].
+|-
+| Τάρταρος (''Tártaros'') || [[ᏔᏔᎶ]] || ᎤᏁᎳᏅᎯ [[ᏔᏔᎶ]]. 
+|-
+| Θάλασσα (''Thálassa'') || [[ᏔᎳᏌ]] || ᎤᏁᎳᏅᎯ ᎠᏰᎬ ᎠᎺᏉᎯ.
+|}
+
+=== [[9 ᎽᏌ]] ===
+
+{| class="wikitable" style="border:1px; background-color:#f7f8ff" align=center cellpadding="6"
+|-align="center" bgcolor="#e6e9ff"
+!!width="170"|ᎪᎢ ᏚᏙᎥ!!width="140"|ᏣᎳᎩ ᏚᏙᎥ!!width="400"|Dominion
+|-
+| Καλλιόπη (''Kalliópē'') || [[ᎧᎳᏲᏈ]] || 
+|-
+| Κλειώ (''Kleiṓ'') || [[ᏝᏲ]] || 
+|-
+| Ἐρατώ (''Eratṓ'') || [[ᎡᎳᏙ]] ||
+|-
+| Eὐτέρπη (''Eutérpē'') || [[ᏳᏖᏈ]] ||
+|-
+| Μελπομένη (''Melpoménē'') || [[ᎺᎵᏉᎻᏂ]] || 
+|-
+| Πολυύμνια (''Polyýmnia'') || [[ᏉᎵᎯᎻᏂᏯ]] || 
+|-
+| Τερψιχόρη (''Terpsikhórē'') || [[ᏖᏆᏏᎪᏫ]] || 
+|-
+| Θαλία (''Thalía'') || [[ᏔᎵᏯ]] ||
+|-
+| Οὐρανία (''Ouranía'') || [[ᏳᏪᏂᏯ]] || 
+|}
+
+=== [[12 ᏔᎢᏖᏂ]] ===
+{| class="wikitable" style="border:1px; background-color:#f7f8ff" align=center cellpadding="6"
+|-align="center" bgcolor="#e6e9ff"
+!!width="170"|ᎪᎢ ᏚᏙᎥ!!width="140"|ᏣᎳᎩ ᏚᏙᎥ!!width="400"|Dominion
+|-
+| Ὑπερίων (''Yperíōn'') || [[ᎭᎢᏈᎵᎣᏂ]] || 
+|-
+| Ἰαπετός (''Iapetós'') || [[ᏯᏇᏔ]] ||
+|-
+| Κοῖος (''Koïos'') || [[ᏏᏯᏏ]] || 
+|-
+| Κρεῖος (''Kreïos'') || [[ᏟᏯᏏ]] ||
+|-
+| Κρόνος (''Krónos'') || [[ᏉᎾᏏ]] || ᎤᎬᏫᏳᎯ [[ᎠᏂᏔᎢᏖᏂ]] ᎤᎾᏤᎵᎦ.
+|-
+| Mνημοσύνη (''Mnēmosýnē'') || [[ᏁᎹᏏᏂ]] || ᎤᏁᎳᏅᎯ ᎠᎨᏴ [[ᎠᏅᏓᏗᏍᏗ]]
+|-
+| Ὠκεανός (''Ōkeanós'') || [[ᎣᏏᏰᏄ]] || ᎤᏁᎳᏅᎯ ᎠᎺᏉᎯ
+|-
+| Φοίβη (''Foívē'') || [[ᏈᎩ]] ||
+|-
+| Ῥέα (''Réa'') || [[ᎵᎠ]] || ᎤᎬᏫᏳᎯ ᎠᏰᎬ ᎠᏂᏔᎢᏖᏂ ᎤᎾᏤᎵᎦ
+|-
+| Τηθύς (''Tēthýs'') || [[ᏘᏘᏏ]] || 
+|-
+| Θεία (''Theía'') || [[ᏘᏯ]] || 
+|-
+| Θέμις (''Thémis'') || [[ᏘᎻᏏ]] || 
+|-
+|}
+
+=== [[Gigantes]] ===
+* [[Hecatoncheires]] (Ἑκατόγχειρες)
+** ᏈᎠᏫᎠ (Βριάρεως)
+** ᎪᏔᏏ (Κόττος)
+** ᏣᎢᏥᏏ (Γύγης)
+
+* [[Cyclopes]] (Κύκλωψ)
+** ᎠᏥᏏ (Ἄργης)
+** ᏆᏂᏘᏏ(Βρόντης)
+** ᏍᏖᎶᏈ (Στερόπης)
+
+
 [[af:Griekse mitologie]]
 [[als:Griechische Mythologie]]
 [[ar:ميثولوجيا إغريقية]]
