--- a/ᎠᏂᎪᎢ_ᎤᏂᏃᎮᎸᎯ.mw
+++ b/ᎠᏂᎪᎢ_ᎤᏂᏃᎮᎸᎯ.mw
@@ -65,7 +65,7 @@
 |-
 | Χρόνος (''Khrónos'') || [[ᏉᏃᏏ]] || ᎤᎡᎳᏅᎯ [[ᎢᏳᏩᎪᏗ]].
 |-
-| αἱ Nῆσοι (''ai Nḗsoi'') || [[ᎠᎹᏰᏟ|ᎯᎸᏍᎩ ᎠᎹᏰᏟ]] || ᎤᏁᎳᏅᎯ ᎠᏂᎨᏴ [[ᎠᎹᏰᏟ]].
+| αἱ Nῆσοι (''ai Nḗsoi'') || [[ᎠᎹᏰᎵ|ᎯᎸᏍᎩ ᎠᎹᏰᎵ]] || ᎤᏁᎳᏅᎯ ᎠᏂᎨᏴ [[ᎠᎹᏰᎵ]].
 |-
 | Νύξ (''Nýx'') || [[ᏂᎩᏏ]] || ᎤᏁᎳᏅᎯ ᎠᎨᏴ [[ᏒᏃᏱ]].
 |-
