*Empty MediaWiki Message*

--- a/ᎤᎵᏍᏆᎾᎵ.mw
+++ b/ᎤᎵᏍᏆᎾᎵ.mw
@@ -1,6 +1,6 @@
-[[File:Uranus2.jpg|thumb|200px|ᏳᎴᏂ]]
+[[File:Uranus2.jpg|thumb|200px|ᏳᏪᏄ]]
 
-'''ᏳᎴᏂ'''
+'''ᏳᏪᏄ''' ᎦᎵᏉᎩᏁᎢ ᏤᏣᎯ.
 
 [[af:Uranus (planeet)]]
 [[als:Uranus (Planet)]]
