*Empty MediaWiki Message*

--- a/ᎤᎵᏍᏆᎾᎵ.mw
+++ b/ᎤᎵᏍᏆᎾᎵ.mw
@@ -1,6 +1,6 @@
 [[File:Uranus2.jpg|thumb|200px|ᏳᏪᏄ]]
 
-'''ᏳᏪᏄ''' ᎦᎵᏉᎩᏁᎢ ᏤᏣᎯ.
+<big>'''ᏳᏪᏄ'''</big> ᎦᎵᏉᎩᏁᎢ ᏤᏣᎯ.
 
 [[af:Uranus (planeet)]]
 [[als:Uranus (Planet)]]
