*Empty MediaWiki Message*

--- a/ᏁᏆᏚ.mw
+++ b/ᏁᏆᏚ.mw
@@ -1,6 +1,6 @@
-[[File:Neptune.jpg|thumb|200px|Ꮑ'ᏚᏂ]]
+[[File:Neptune.jpg|thumb|200px|ᏁᏩᏚᏂ]]
 
-'''Ꮑ'ᏚᏂ'''
+<big>'''ᏁᏩᏚᏂ'''</big> ᏧᏁᎵᏁᎢ ᏤᏣᎯ.
 
 [[af:Neptunus (planeet)]]
 [[als:Neptun (Planet)]]
