*Empty MediaWiki Message*

--- a/ᎹᏏ.mw
+++ b/ᎹᏏ.mw
@@ -1,6 +1,6 @@
 [[File:Mars Valles Marineris.jpeg|thumb|200px|ᎹᏏ]]
 
-'''ᎹᏏ'''
+<big>'''ᎹᏏ'''</big> ᏅᎩᏁᎢ ᏤᏣᎯ.
 
 [[af:Mars (planeet)]]
 [[als:Mars (Planet)]]
