--- a/ᎠᏂᎪᎢ_ᎤᏂᏃᎮᎸᎯ.mw
+++ b/ᎠᏂᎪᎢ_ᎤᏂᏃᎮᎸᎯ.mw
@@ -69,7 +69,7 @@
 |-
 | Νύξ (''Nýx'') || [[ᏂᎩᏏ]] || ᎤᏁᎳᏅᎯ ᎠᎨᏴ [[ᏒᏃᏱ]].
 |-
-| Ουρανός (''Ouranós'') || [[ᏳᏪᏄ]] || ᎤᏁᎳᏅᎯ [[ᎦᎸᎶᎢ]].
+| Ουρανός (''Ouranós'') || [[ᏳᏪᏄ (ᎤᏁᎳᏅᎯ)|ᏳᏪᏄ]] || ᎤᏁᎳᏅᎯ [[ᎦᎸᎶᎢ]].
 |-
 | Ούρος (''Oúros'') || [[ᎣᏓᎸᎢ|ᏙᏓᎸᎢ]] || ᎤᎾᏁᎳᏅᎯ [[ᏙᏓᎸᎢ]].
 |-
