*Empty MediaWiki Message*

--- a/ᎹᎫᎵ.mw
+++ b/ᎹᎫᎵ.mw
@@ -1,6 +1,6 @@
 [[File:Mercury_in_color_-_Prockter07_centered.jpg|thumb|200px|ᎹᏓᎵ]]
 
-<big>'''ᎹᏓᎵ'''</big> ᎢᎬᏱᎢ ᏤᏣᎯ.
+<big>'''ᎹᏓᎵ'''</big> ᎢᎬᏱᎢ ᎡᎶᎯ.
 
 [[af:Mercurius]]
 [[als:Merkur (Planet)]]
